Apply black linter to notebooks

--- a/notebooks/Create custom architectures using FLEXible.ipynb
+++ b/notebooks/Create custom architectures using FLEXible.ipynb
@@ -17,7 +17,12 @@
    "outputs": [],
    "source": [
     "from flex.pool import FlexPool\n",
-    "from flex.actors import FlexActors, FlexRole, client_server_architecture, p2p_architecture\n",
+    "from flex.actors import (\n",
+    "    FlexActors,\n",
+    "    FlexRole,\n",
+    "    client_server_architecture,\n",
+    "    p2p_architecture,\n",
+    ")\n",
     "from flex.data import FedDataDistribution, Dataset\n",
     "\n",
     "from sklearn.datasets import load_iris\n",
@@ -40,7 +45,9 @@
    "source": [
     "iris = load_iris()\n",
     "# Generate train-test splits\n",
-    "X_train, X_test, y_train, y_test = train_test_split(iris.data, iris.target, test_size=0.33, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    iris.data, iris.target, test_size=0.33, random_state=42\n",
+    ")\n",
     "\n",
     "train_iris = Dataset.from_numpy(X_train, y_train)\n",
     "test_iris = Dataset.from_numpy(X_test, y_test)\n",
@@ -64,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_architecture_clients_as_aggregators(node_ids: list) -> FlexActors :\n",
+    "def custom_architecture_clients_as_aggregators(node_ids: list) -> FlexActors:\n",
     "    if \"server\" in node_ids:\n",
     "        raise ValueError(\n",
     "            \"The name 'server' is reserved only for the server in a client-server architecture.\"\n",
@@ -75,7 +82,7 @@
     "    for clitent_id in node_ids:\n",
     "        actors[clitent_id] = FlexRole.aggregator_client\n",
     "\n",
-    "    actors['server'] = FlexRole.server\n",
+    "    actors[\"server\"] = FlexRole.server\n",
     "\n",
     "    return actors"
    ]
@@ -86,7 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients_aggregators_actors = custom_architecture_clients_as_aggregators(list(federated_iris.keys()))\n",
+    "clients_aggregators_actors = custom_architecture_clients_as_aggregators(\n",
+    "    list(federated_iris.keys())\n",
+    ")\n",
     "\n",
     "clients_aggregators_pool = FlexPool(federated_iris, clients_aggregators_actors)\n",
     "\n",
@@ -98,7 +107,9 @@
     "print(f\"Aggregators ids: {aggregators.actor_ids}\")\n",
     "print(f\"Servers ids: {servers.actor_ids}\")\n",
     "\n",
-    "print(f\"Clients and aggregators are the same actors: {sorted(clients.actor_ids) == sorted(aggregators.actor_ids)}\")"
+    "print(\n",
+    "    f\"Clients and aggregators are the same actors: {sorted(clients.actor_ids) == sorted(aggregators.actor_ids)}\"\n",
+    ")"
    ]
   },
   {
@@ -115,7 +126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_architecture_n_clients_as_aggregators(node_ids: list, n_clients_as_aggregators) -> FlexActors :\n",
+    "def custom_architecture_n_clients_as_aggregators(\n",
+    "    node_ids: list, n_clients_as_aggregators\n",
+    ") -> FlexActors:\n",
     "    if \"server\" in node_ids:\n",
     "        raise ValueError(\n",
     "            \"The name 'server' is reserved only for the server in a client-server architecture.\"\n",
@@ -131,7 +144,7 @@
     "    for client_id in range(n_clients_as_aggregators, len(node_ids)):\n",
     "        actors[client_id] = FlexRole.client\n",
     "\n",
-    "    actors['server'] = FlexRole.server\n",
+    "    actors[\"server\"] = FlexRole.server\n",
     "\n",
     "    return actors"
    ]
@@ -142,9 +155,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_clients_as_aggregators_actors = custom_architecture_n_clients_as_aggregators(list(federated_iris.keys()), n_clients_as_aggregators=5)\n",
+    "n_clients_as_aggregators_actors = custom_architecture_n_clients_as_aggregators(\n",
+    "    list(federated_iris.keys()), n_clients_as_aggregators=5\n",
+    ")\n",
     "\n",
-    "n_clients_as_aggregators_pool = FlexPool(federated_iris, n_clients_as_aggregators_actors)\n",
+    "n_clients_as_aggregators_pool = FlexPool(\n",
+    "    federated_iris, n_clients_as_aggregators_actors\n",
+    ")\n",
     "\n",
     "clients = n_clients_as_aggregators_pool.clients\n",
     "aggregators = n_clients_as_aggregators_pool.aggregators\n",
@@ -169,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_architecture(node_ids: list) -> FlexActors :\n",
+    "def custom_architecture(node_ids: list) -> FlexActors:\n",
     "    if \"server\" in node_ids:\n",
     "        raise ValueError(\n",
     "            \"The name 'server' is reserved only for the server in a client-server architecture.\"\n",
@@ -179,26 +196,41 @@
     "\n",
     "    n_nodes = len(node_ids)\n",
     "    print(f\"Total number of available clients: {n_nodes}\")\n",
-    "    n_clients_aggregators = np.random.randint(low=0, high=n_nodes//2)\n",
+    "    n_clients_aggregators = np.random.randint(low=0, high=n_nodes // 2)\n",
     "    print(f\"Clients as aggregators: {n_clients_aggregators}\")\n",
-    "    n_clients_servers = np.random.randint(low=0, high=n_nodes-n_clients_aggregators)\n",
+    "    n_clients_servers = np.random.randint(low=0, high=n_nodes - n_clients_aggregators)\n",
     "    print(f\"Clients as servers: {n_clients_servers}\")\n",
     "    rest_clients = n_nodes - (n_clients_aggregators + n_clients_servers)\n",
     "    print(f\"Only clients: {rest_clients}\")\n",
     "    actors = FlexActors(\n",
-    "        {node_ids[client_id]: FlexRole.aggregator_client for client_id in range(n_clients_aggregators)}\n",
+    "        {\n",
+    "            node_ids[client_id]: FlexRole.aggregator_client\n",
+    "            for client_id in range(n_clients_aggregators)\n",
+    "        }\n",
     "    )\n",
     "\n",
     "    actors.update(\n",
-    "        FlexActors({node_ids[client_id]: FlexRole.server_client for client_id in range(n_clients_aggregators, n_nodes-rest_clients)})\n",
+    "        FlexActors(\n",
+    "            {\n",
+    "                node_ids[client_id]: FlexRole.server_client\n",
+    "                for client_id in range(n_clients_aggregators, n_nodes - rest_clients)\n",
+    "            }\n",
+    "        )\n",
     "    )\n",
     "\n",
     "    actors.update(\n",
-    "        FlexActors({node_ids[client_id]: FlexRole.client for client_id in range(n_clients_aggregators+n_clients_servers, n_nodes)})\n",
+    "        FlexActors(\n",
+    "            {\n",
+    "                node_ids[client_id]: FlexRole.client\n",
+    "                for client_id in range(\n",
+    "                    n_clients_aggregators + n_clients_servers, n_nodes\n",
+    "                )\n",
+    "            }\n",
+    "        )\n",
     "    )\n",
     "\n",
     "    if n_clients_servers == 0:\n",
-    "        actors['server'] = FlexRole.server\n",
+    "        actors[\"server\"] = FlexRole.server\n",
     "\n",
     "    return actors"
    ]
@@ -247,10 +279,15 @@
     "    )\n",
     "\n",
     "    actors.update(\n",
-    "        FlexActors({f\"aggregator_{agg_id}\": FlexRole.aggregator for agg_id in range(n_aggregators)})\n",
+    "        FlexActors(\n",
+    "            {\n",
+    "                f\"aggregator_{agg_id}\": FlexRole.aggregator\n",
+    "                for agg_id in range(n_aggregators)\n",
+    "            }\n",
+    "        )\n",
     "    )\n",
     "\n",
-    "    actors['server'] = FlexRole.server\n",
+    "    actors[\"server\"] = FlexRole.server\n",
     "\n",
     "    return actors"
    ]
@@ -294,21 +331,24 @@
     "\n",
     "import tensorflow as tf\n",
     "\n",
+    "\n",
     "@init_server_model\n",
     "def define_model(**kwargs):\n",
     "    from copy import deepcopy\n",
-    "    input_shape = kwargs['input_shape']\n",
-    "    n_labels = kwargs['n_classes']\n",
+    "\n",
+    "    input_shape = kwargs[\"input_shape\"]\n",
+    "    n_labels = kwargs[\"n_classes\"]\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(tf.keras.layers.Input(shape=input_shape))\n",
     "    model.add(tf.keras.layers.Dense(units=64))\n",
     "    model.add(tf.keras.layers.Dense(n_classes))\n",
     "    model.compile(\n",
-    "        optimizer='adam',\n",
+    "        optimizer=\"adam\",\n",
     "        loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
-    "        metrics=[tf.metrics.Accuracy(name='accuracy')],\n",
+    "        metrics=[tf.metrics.Accuracy(name=\"accuracy\")],\n",
     "    )\n",
     "    from flex.model import FlexModel\n",
+    "\n",
     "    server_flex_model = FlexModel()\n",
     "    server_flex_model[\"model\"] = model\n",
     "    server_flex_model[\"loss\"] = deepcopy(model.loss)\n",
@@ -323,7 +363,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_scenario_pool.servers.map(define_model, input_shape=iris.data.shape[1], n_classes=len(set(iris.target)))\n",
+    "real_scenario_pool.servers.map(\n",
+    "    define_model, input_shape=iris.data.shape[1], n_classes=len(set(iris.target))\n",
+    ")\n",
     "\n",
     "print(\"Let's show the models available in the pool:\")\n",
     "print(real_scenario_pool._models)"
@@ -351,7 +393,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pool = FlexPool.client_server_pool(fed_dataset=federated_iris, init_func=define_model, input_shape=iris.data.shape[1], n_classes=len(set(iris.target)))\n",
+    "pool = FlexPool.client_server_pool(\n",
+    "    fed_dataset=federated_iris,\n",
+    "    init_func=define_model,\n",
+    "    input_shape=iris.data.shape[1],\n",
+    "    n_classes=len(set(iris.target)),\n",
+    ")\n",
     "\n",
     "clients = pool.clients\n",
     "aggregators = pool.aggregators\n",
