--- a/notebooks/Federate datasets from other libraries with FLEXible.ipynb
+++ b/notebooks/Federate datasets from other libraries with FLEXible.ipynb
@@ -42,8 +42,8 @@
     "# HuggingFace\n",
     "from datasets import load_dataset\n",
     "\n",
-    "# Load a dataset into a Dataset\n",
-    "dataset_hf = load_dataset('ag_news', split='train')"
+    "# Load a dataset into a Dataset\n",
+    "dataset_hf = load_dataset(\"ag_news\", split=\"train\")"
    ]
   },
   {
@@ -65,17 +65,15 @@
     ")\n",
     "\n",
     "# Create a config and federate the dataset\n",
-    "config_hf = FedDatasetConfig(\n",
-    "    seed=0,\n",
-    "    n_nodes=2,\n",
-    "    replacement=False\n",
-    ")\n",
+    "config_hf = FedDatasetConfig(seed=0, n_nodes=2, replacement=False)\n",
     "\n",
     "\n",
     "flex_dataset_two_step_hf = FedDataDistribution.from_config(\n",
     "    centralized_data=fcd_hf, config=config_hf\n",
     ")\n",
-    "print(f\"Flex dataset two steps a data sample from client_0: {flex_dataset_two_step_hf[0].X_data[0]}\")"
+    "print(\n",
+    "    f\"Flex dataset two steps a data sample from client_0: {flex_dataset_two_step_hf[0].X_data[0]}\"\n",
+    ")"
    ]
   },
   {
@@ -117,11 +115,11 @@
     "import tensorflow_datasets as tfds\n",
     "\n",
     "train_mnist, test = tfds.load(\n",
-    "    'mnist',\n",
-    "    split=['train', 'test'],\n",
+    "    \"mnist\",\n",
+    "    split=[\"train\", \"test\"],\n",
     "    shuffle_files=True,\n",
     "    as_supervised=True,\n",
-    "    batch_size=-1, # this is required\n",
+    "    batch_size=-1,  # this is required\n",
     ")"
    ]
   },
@@ -141,22 +139,18 @@
    "source": [
     "fcd_tf = Dataset.from_tfds_image_dataset(train_mnist)\n",
     "\n",
-    "config_tf = FedDatasetConfig(\n",
-    "    seed=0,\n",
-    "    n_nodes=2,\n",
-    "    replacement=False\n",
-    ")\n",
+    "config_tf = FedDatasetConfig(seed=0, n_nodes=2, replacement=False)\n",
     "\n",
     "\n",
-    "# Federate the Dataset we just created\n",
+    "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_tf = FedDataDistribution.from_config(\n",
-    "    centralized_data=fcd_tf,\n",
-    "    config=config_tf\n",
+    "    centralized_data=fcd_tf, config=config_tf\n",
     ")\n",
     "\n",
     "sample = flex_dataset_two_step_tf[0].X_data[0]\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.imshow(sample, cmap=plt.get_cmap('gray'))"
+    "\n",
+    "plt.imshow(sample, cmap=plt.get_cmap(\"gray\"))"
    ]
   },
   {
@@ -177,13 +171,13 @@
    "source": [
     "# Federate the dataset directly\n",
     "flex_dataset_tf = FedDataDistribution.from_config_with_tfds_image_dataset(\n",
-    "    train_mnist,\n",
-    "    config_tf\n",
+    "    train_mnist, config_tf\n",
     ")\n",
     "\n",
     "sample = flex_dataset_tf[0].X_data[0]\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.imshow(sample, cmap=plt.get_cmap('gray'))"
+    "\n",
+    "plt.imshow(sample, cmap=plt.get_cmap(\"gray\"))"
    ]
   },
   {
@@ -203,10 +197,7 @@
     "from torchvision import datasets, transforms\n",
     "\n",
     "cifar10 = datasets.CIFAR10(\n",
-    "        root=\".\",\n",
-    "        train=True,\n",
-    "        download=True,\n",
-    "        transform=transforms.ToTensor()\n",
+    "    root=\".\", train=True, download=True, transform=transforms.ToTensor()\n",
     ")"
    ]
   },
@@ -226,23 +217,19 @@
    "source": [
     "fcd_torch = Dataset.from_torchvision_dataset(cifar10)\n",
     "\n",
-    "config_torch = FedDatasetConfig(\n",
-    "    seed=0,\n",
-    "    n_nodes=2,\n",
-    "    replacement=False\n",
-    ")\n",
+    "config_torch = FedDatasetConfig(seed=0, n_nodes=2, replacement=False)\n",
     "\n",
-    "# Federate the Dataset we just created\n",
+    "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
-    "    centralized_data=fcd_torch,\n",
-    "    config=config_torch\n",
+    "    centralized_data=fcd_torch, config=config_torch\n",
     ")\n",
     "\n",
     "sample = flex_dataset_two_step_torch[0].X_data[0]\n",
     "import matplotlib.pyplot as plt\n",
-    "sample = sample.swapaxes(0,1)\n",
-    "sample = sample.swapaxes(1,2)\n",
-    "plt.imshow(sample, cmap=plt.get_cmap('gray'))"
+    "\n",
+    "sample = sample.swapaxes(0, 1)\n",
+    "sample = sample.swapaxes(1, 2)\n",
+    "plt.imshow(sample, cmap=plt.get_cmap(\"gray\"))"
    ]
   },
   {
@@ -261,15 +248,15 @@
    "source": [
     "# Federate the dataset directly\n",
     "flex_dataset_torch = FedDataDistribution.from_config_with_torchvision_dataset(\n",
-    "    cifar10,\n",
-    "    config_tf\n",
+    "    cifar10, config_tf\n",
     ")\n",
     "\n",
     "sample = flex_dataset_torch[0].X_data[0]\n",
     "import matplotlib.pyplot as plt\n",
-    "sample = sample.swapaxes(0,1)\n",
-    "sample = sample.swapaxes(1,2)\n",
-    "plt.imshow(sample, cmap=plt.get_cmap('gray'))"
+    "\n",
+    "sample = sample.swapaxes(0, 1)\n",
+    "sample = sample.swapaxes(1, 2)\n",
+    "plt.imshow(sample, cmap=plt.get_cmap(\"gray\"))"
    ]
   },
   {
@@ -288,7 +275,7 @@
    "source": [
     "from torchtext.datasets import AG_NEWS\n",
     "\n",
-    "torch_dataset = AG_NEWS(split='train')"
+    "torch_dataset = AG_NEWS(split=\"train\")"
    ]
   },
   {
@@ -307,17 +294,12 @@
    "source": [
     "fcd_torch = Dataset.from_torchtext_dataset(torch_dataset)\n",
     "\n",
-    "# We will use the same configuration than in the HuggingFace example\n",
-    "config_torch = FedDatasetConfig(\n",
-    "    seed=0,\n",
-    "    n_nodes=2,\n",
-    "    replacement=False\n",
-    ")\n",
+    "# We will use the same configuration than in the HuggingFace example\n",
+    "config_torch = FedDatasetConfig(seed=0, n_nodes=2, replacement=False)\n",
     "\n",
-    "# Federate the Dataset we just created\n",
+    "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
-    "    centralized_data=fcd_torch,\n",
-    "    config=config_torch\n",
+    "    centralized_data=fcd_torch, config=config_torch\n",
     ")\n",
     "\n",
     "print(f\"Flex dataset two steps: {flex_dataset_two_step_torch[0].X_data[0]}\")"
@@ -339,8 +321,7 @@
    "source": [
     "# Federate the dataset directly\n",
     "flex_dataset_torch = FedDataDistribution.from_config_with_torchtext_dataset(\n",
-    "    torch_dataset,\n",
-    "    config_torch\n",
+    "    torch_dataset, config_torch\n",
     ")\n",
     "print(f\"Flex dataset direct: {flex_dataset_torch[0].X_data[0]}\")"
    ]
