--- a/notebooks/Federated CIFAR10 PT example with primitives.ipynb
+++ b/notebooks/Federated CIFAR10 PT example with primitives.ipynb
@@ -30,6 +30,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "\n",
     "device = (\n",
     "    \"cuda\"\n",
     "    if torch.cuda.is_available()\n",
@@ -49,24 +50,26 @@
     "from flex.data import Dataset, FedDatasetConfig, FedDataDistribution\n",
     "from torchvision import datasets, transforms\n",
     "\n",
-    "cifar_transforms = transforms.Compose([\n",
-    "        transforms.Resize((224,224)),\n",
+    "cifar_transforms = transforms.Compose(\n",
+    "    [\n",
+    "        transforms.Resize((224, 224)),\n",
     "        transforms.ToTensor(),\n",
-    "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
-    "    ])\n",
+    "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "train_data = datasets.CIFAR10(\n",
-    "        root=\".\",\n",
-    "        train=True,\n",
-    "        download=True,\n",
-    "        transform=None, # Note that we do not specify transforms here, we provide them later in the training process\n",
+    "    root=\".\",\n",
+    "    train=True,\n",
+    "    download=True,\n",
+    "    transform=None,  # Note that we do not specify transforms here, we provide them later in the training process\n",
     ")\n",
     "\n",
     "test_data = datasets.CIFAR10(\n",
-    "        root=\".\",\n",
-    "        train=False,\n",
-    "        download=True,\n",
-    "        transform=None, # Note that we do not specify transforms here, we provide them later in the training process\n",
+    "    root=\".\",\n",
+    "    train=False,\n",
+    "    download=True,\n",
+    "    transform=None,  # Note that we do not specify transforms here, we provide them later in the training process\n",
     ")\n",
     "\n",
     "\n",
@@ -75,9 +78,8 @@
     "config.n_nodes = 100\n",
     "\n",
     "flex_dataset = FedDataDistribution.from_config(\n",
-    "                        centralized_data=Dataset.from_torchvision_dataset(train_data), \n",
-    "                        config=config\n",
-    "                )\n",
+    "    centralized_data=Dataset.from_torchvision_dataset(train_data), config=config\n",
+    ")\n",
     "\n",
     "# Assign test data to server_id\n",
     "server_id = \"server\"\n",
@@ -107,12 +109,14 @@
     "\n",
     "from torchvision.models import resnet18\n",
     "\n",
+    "\n",
     "def get_model(num_classes=10):\n",
-    "    resnet_model = resnet18(weights='DEFAULT')\n",
+    "    resnet_model = resnet18(weights=\"DEFAULT\")\n",
     "    for p in resnet_model.parameters():\n",
     "        p.requires_grad = False\n",
     "    resnet_model.fc = torch.nn.Linear(resnet_model.fc.in_features, num_classes)\n",
     "    return resnet_model\n",
+    "\n",
     "\n",
     "@init_server_model\n",
     "def build_server_model():\n",
@@ -126,13 +130,18 @@
     "\n",
     "    return server_flex_model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(flex_dataset, server_id=server_id, init_func=build_server_model)\n",
+    "\n",
+    "flex_pool = FlexPool.client_server_pool(\n",
+    "    flex_dataset, server_id=server_id, init_func=build_server_model\n",
+    ")\n",
     "\n",
     "clients = flex_pool.clients\n",
     "servers = flex_pool.servers\n",
     "aggregators = flex_pool.aggregators\n",
     "\n",
-    "print(f\"Number of nodes in the pool {len(flex_pool)}: {len(servers)} server plus {len(clients)} clients. The server is also an aggregator\")"
+    "print(\n",
+    "    f\"Number of nodes in the pool {len(flex_pool)}: {len(servers)} server plus {len(clients)} clients. The server is also an aggregator\"\n",
+    ")"
    ]
   },
   {
@@ -149,13 +158,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Select clients\n",
-    "clients_per_round=2\n",
+    "# Select clients\n",
+    "clients_per_round = 2\n",
     "selected_clients_pool = clients.select(clients_per_round)\n",
     "selected_clients = selected_clients_pool.clients\n",
     "\n",
-    "print(f\"Server node is indentified by key \\\"{servers.actor_ids[0]}\\\"\")\n",
-    "print(f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\")"
+    "print(f'Server node is indentified by key \"{servers.actor_ids[0]}\"')\n",
+    "print(\n",
+    "    f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\"\n",
+    ")"
    ]
   },
   {
@@ -196,13 +207,18 @@
     "from copy import deepcopy\n",
     "from tqdm import tqdm\n",
     "\n",
+    "\n",
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    train_dataset = client_data.to_torchvision_dataset(transform=cifar_transforms)\n",
     "    client_dataloader = DataLoader(train_dataset, batch_size=64)\n",
     "    model = client_flex_model[\"model\"]\n",
     "    model = model.to(device)\n",
-    "    client_flex_model['previous_model'] = deepcopy(model) # Required to use `collect_client_diff_weights_pt` primitive\n",
-    "    optimizer = client_flex_model['optimizer_func'](model.parameters(), **client_flex_model[\"optimizer_kwargs\"])\n",
+    "    client_flex_model[\"previous_model\"] = deepcopy(\n",
+    "        model\n",
+    "    )  # Required to use `collect_client_diff_weights_pt` primitive\n",
+    "    optimizer = client_flex_model[\"optimizer_func\"](\n",
+    "        model.parameters(), **client_flex_model[\"optimizer_kwargs\"]\n",
+    "    )\n",
     "    model = model.train()\n",
     "    criterion = client_flex_model[\"criterion\"]\n",
     "    epochs = 5\n",
@@ -303,10 +319,12 @@
     "    test_acc = 0\n",
     "    total_count = 0\n",
     "    model = model.to(device)\n",
-    "    criterion=server_flex_model['criterion']\n",
+    "    criterion = server_flex_model[\"criterion\"]\n",
     "    # get test data as a torchvision object\n",
     "    test_dataset = test_data.to_torchvision_dataset(transform=cifar_transforms)\n",
-    "    test_dataloader = DataLoader(test_dataset, batch_size=256, shuffle=True, pin_memory=False)\n",
+    "    test_dataloader = DataLoader(\n",
+    "        test_dataset, batch_size=256, shuffle=True, pin_memory=False\n",
+    "    )\n",
     "    losses = []\n",
     "    with torch.no_grad():\n",
     "        for data, target in tqdm(test_dataloader):\n",
@@ -328,7 +346,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "metrics = servers.map(evaluate_global_model)\n",
     "print(metrics[0])"
    ]
@@ -352,11 +369,15 @@
     "# Auxiliar function to clear unused gpu mem in clients\n",
     "def clean_up_models(client_model: FlexModel, _):\n",
     "    import gc\n",
+    "\n",
     "    client_model.clear()\n",
     "    gc.collect()\n",
     "\n",
-    "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model)\n",
+    "\n",
+    "def train_n_rounds(n_rounds, clients_per_round=20):\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model\n",
+    "    )\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
