--- a/notebooks/Federated MNIST PT example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST PT example with flexible decorators.ipynb
@@ -28,6 +28,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "\n",
     "device = (\n",
     "    \"cuda\"\n",
     "    if torch.cuda.is_available()\n",
@@ -52,10 +53,9 @@
     "server_id = \"server\"\n",
     "flex_dataset[server_id] = test_data\n",
     "\n",
-    "mnist_transforms = transforms.Compose([\n",
-    "            transforms.ToTensor(),\n",
-    "            transforms.Normalize((0.5,), (0.5,))\n",
-    "        ])"
+    "mnist_transforms = transforms.Compose(\n",
+    "    [transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))]\n",
+    ")"
    ]
   },
   {
@@ -79,11 +79,12 @@
     "from flex.pool import FlexPool\n",
     "from flex.model import FlexModel\n",
     "\n",
+    "\n",
     "class SimpleNet(nn.Module):\n",
     "    def __init__(self, num_classes=10):\n",
     "        super().__init__()\n",
     "        self.flatten = nn.Flatten()\n",
-    "        self.fc1 = nn.Linear(28*28, 128)\n",
+    "        self.fc1 = nn.Linear(28 * 28, 128)\n",
     "        self.fc2 = nn.Linear(128, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -92,6 +93,7 @@
     "        x = F.relu(x)\n",
     "        x = self.fc2(x)\n",
     "        return F.log_softmax(x, dim=1)\n",
+    "\n",
     "\n",
     "@init_server_model\n",
     "def build_server_model():\n",
@@ -104,13 +106,18 @@
     "    server_flex_model[\"optimizer_kwargs\"] = {}\n",
     "    return server_flex_model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(flex_dataset, server_id=server_id, init_func=build_server_model)\n",
+    "\n",
+    "flex_pool = FlexPool.client_server_pool(\n",
+    "    flex_dataset, server_id=server_id, init_func=build_server_model\n",
+    ")\n",
     "\n",
     "clients = flex_pool.clients\n",
     "servers = flex_pool.servers\n",
     "aggregators = flex_pool.aggregators\n",
     "\n",
-    "print(f\"Number of nodes in the pool {len(flex_pool)}: {len(servers)} server plus {len(clients)} clients. The server is also an aggregator\")"
+    "print(\n",
+    "    f\"Number of nodes in the pool {len(flex_pool)}: {len(servers)} server plus {len(clients)} clients. The server is also an aggregator\"\n",
+    ")"
    ]
   },
   {
@@ -127,13 +134,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Select clients\n",
-    "clients_per_round=20\n",
+    "# Select clients\n",
+    "clients_per_round = 20\n",
     "selected_clients_pool = clients.select(clients_per_round)\n",
     "selected_clients = selected_clients_pool.clients\n",
     "\n",
-    "print(f\"Server node is indentified by key \\\"{servers.actor_ids[0]}\\\"\")\n",
-    "print(f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\")"
+    "print(f'Server node is indentified by key \"{servers.actor_ids[0]}\"')\n",
+    "print(\n",
+    "    f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\"\n",
+    ")"
    ]
   },
   {
@@ -152,6 +161,7 @@
    "source": [
     "from flex.pool import deploy_server_model\n",
     "import copy\n",
+    "\n",
     "\n",
     "@deploy_server_model\n",
     "def copy_server_model_to_clients(server_flex_model: FlexModel):\n",
@@ -178,11 +188,14 @@
     "from flex.data import Dataset\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
+    "\n",
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    train_dataset = client_data.to_torchvision_dataset(transform=mnist_transforms)\n",
     "    client_dataloader = DataLoader(train_dataset, batch_size=20)\n",
     "    model = client_flex_model[\"model\"]\n",
-    "    optimizer = client_flex_model['optimizer_func'](model.parameters(), **client_flex_model[\"optimizer_kwargs\"])\n",
+    "    optimizer = client_flex_model[\"optimizer_func\"](\n",
+    "        model.parameters(), **client_flex_model[\"optimizer_kwargs\"]\n",
+    "    )\n",
     "    model = model.train()\n",
     "    model = model.to(device)\n",
     "    criterion = client_flex_model[\"criterion\"]\n",
@@ -194,6 +207,7 @@
     "            loss = criterion(pred, labels)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "\n",
     "\n",
     "selected_clients.map(train)"
    ]
@@ -220,6 +234,7 @@
     "    weight_dict = client_flex_model[\"model\"].state_dict()\n",
     "    return [weight_dict[name] for name in weight_dict]\n",
     "\n",
+    "\n",
     "aggregators.map(get_clients_weights, selected_clients)"
    ]
   },
@@ -240,7 +255,8 @@
     "from flex.pool import aggregate_weights\n",
     "import tensorly as tl\n",
     "\n",
-    "tl.set_backend('pytorch')\n",
+    "tl.set_backend(\"pytorch\")\n",
+    "\n",
     "\n",
     "@aggregate_weights\n",
     "def aggregate_with_fedavg(list_of_weights: list):\n",
@@ -251,6 +267,7 @@
     "        agg_layer = tl.mean(weights_per_layer, axis=0)\n",
     "        agg_weights.append(agg_layer)\n",
     "    return agg_weights\n",
+    "\n",
     "\n",
     "# Aggregate weights\n",
     "aggregators.map(aggregate_with_fedavg)"
@@ -272,14 +289,14 @@
    "source": [
     "from flex.pool import set_aggregated_weights\n",
     "\n",
+    "\n",
     "@set_aggregated_weights\n",
     "def set_agreggated_weights_to_server(server_flex_model: FlexModel, aggregated_weights):\n",
     "    with torch.no_grad():\n",
     "        weight_dict = server_flex_model[\"model\"].state_dict()\n",
-    "        for layer_key, new in zip(\n",
-    "            weight_dict, aggregated_weights\n",
-    "        ):\n",
+    "        for layer_key, new in zip(weight_dict, aggregated_weights):\n",
     "            weight_dict[layer_key].copy_(new)\n",
+    "\n",
     "\n",
     "aggregators.map(set_agreggated_weights_to_server, servers)"
    ]
@@ -305,10 +322,12 @@
     "    test_acc = 0\n",
     "    total_count = 0\n",
     "    model = model.to(device)\n",
-    "    criterion=server_flex_model['criterion']\n",
+    "    criterion = server_flex_model[\"criterion\"]\n",
     "    # get test data as a torchvision object\n",
     "    test_dataset = test_data.to_torchvision_dataset(transform=mnist_transforms)\n",
-    "    test_dataloader = DataLoader(test_dataset, batch_size=256, shuffle=True, pin_memory=False)\n",
+    "    test_dataloader = DataLoader(\n",
+    "        test_dataset, batch_size=256, shuffle=True, pin_memory=False\n",
+    "    )\n",
     "    losses = []\n",
     "    with torch.no_grad():\n",
     "        for data, target in test_dataloader:\n",
@@ -319,9 +338,10 @@
     "            pred = output.data.max(1, keepdim=True)[1]\n",
     "            test_acc += pred.eq(target.data.view_as(pred)).long().cpu().sum().item()\n",
     "\n",
-    "    test_loss = sum(losses)/len(losses)\n",
+    "    test_loss = sum(losses) / len(losses)\n",
     "    test_acc /= total_count\n",
     "    return test_loss, test_acc\n",
+    "\n",
     "\n",
     "metrics = servers.map(evaluate_global_model)\n",
     "print(metrics[0])"
@@ -343,8 +363,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model)\n",
+    "def train_n_rounds(n_rounds, clients_per_round=20):\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model\n",
+    "    )\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
