--- a/notebooks/Federated MNIST TF example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST TF example with flexible decorators.ipynb
@@ -28,12 +28,16 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
+    "\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
     "\n",
     "import tensorflow as tf\n",
+    "\n",
     "print(\"Version: \", tf.__version__)\n",
     "print(\"Eager mode: \", tf.executing_eagerly())\n",
-    "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")"
+    "print(\n",
+    "    \"GPU is\", \"available\" if tf.config.list_physical_devices(\"GPU\") else \"NOT AVAILABLE\"\n",
+    ")"
    ]
   },
   {
@@ -70,33 +74,43 @@
     "from flex.model import FlexModel\n",
     "from copy import deepcopy\n",
     "\n",
+    "\n",
     "@init_server_model\n",
     "def build_server_model():\n",
     "    server_flex_model = FlexModel()\n",
     "\n",
-    "    server_flex_model[\"model\"] = tf.keras.models.Sequential([\n",
-    "        tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
-    "        tf.keras.layers.Dense(128, activation='relu'),\n",
-    "        tf.keras.layers.Dense(10, activation='softmax')\n",
-    "    ])\n",
-    "    server_flex_model[\"model\"].compile(optimizer='adam',\n",
-    "                loss='sparse_categorical_crossentropy',\n",
-    "                metrics=['accuracy'])\n",
+    "    server_flex_model[\"model\"] = tf.keras.models.Sequential(\n",
+    "        [\n",
+    "            tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "            tf.keras.layers.Dense(128, activation=\"relu\"),\n",
+    "            tf.keras.layers.Dense(10, activation=\"softmax\"),\n",
+    "        ]\n",
+    "    )\n",
+    "    server_flex_model[\"model\"].compile(\n",
+    "        optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"]\n",
+    "    )\n",
     "\n",
     "    # Required to copy this model in later stages of the FL training process\n",
     "    server_flex_model[\"optimizer\"] = deepcopy(server_flex_model[\"model\"].optimizer)\n",
     "    server_flex_model[\"loss\"] = deepcopy(server_flex_model[\"model\"].loss)\n",
-    "    server_flex_model[\"metrics\"] = deepcopy(server_flex_model[\"model\"].compiled_metrics._metrics)\n",
+    "    server_flex_model[\"metrics\"] = deepcopy(\n",
+    "        server_flex_model[\"model\"].compiled_metrics._metrics\n",
+    "    )\n",
     "\n",
     "    return server_flex_model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(flex_dataset, server_id=server_id, init_func=build_server_model)\n",
+    "\n",
+    "flex_pool = FlexPool.client_server_pool(\n",
+    "    flex_dataset, server_id=server_id, init_func=build_server_model\n",
+    ")\n",
     "\n",
     "clients = flex_pool.clients\n",
     "servers = flex_pool.servers\n",
     "aggregators = flex_pool.aggregators\n",
     "\n",
-    "print(f\"Number of nodes in the pool {len(flex_pool)}: {len(servers)} server plus {len(clients)} clients. The server is also an aggregator\")"
+    "print(\n",
+    "    f\"Number of nodes in the pool {len(flex_pool)}: {len(servers)} server plus {len(clients)} clients. The server is also an aggregator\"\n",
+    ")"
    ]
   },
   {
@@ -113,13 +127,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Select clients\n",
-    "clients_per_round=20\n",
+    "# Select clients\n",
+    "clients_per_round = 20\n",
     "selected_clients_pool = clients.select(clients_per_round)\n",
     "selected_clients = selected_clients_pool.clients\n",
     "\n",
-    "print(f\"Server node is indentified by key \\\"{servers.actor_ids[0]}\\\"\")\n",
-    "print(f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\")"
+    "print(f'Server node is indentified by key \"{servers.actor_ids[0]}\"')\n",
+    "print(\n",
+    "    f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\"\n",
+    ")"
    ]
   },
   {
@@ -137,6 +153,7 @@
    "outputs": [],
    "source": [
     "from flex.pool import deploy_server_model\n",
+    "\n",
     "\n",
     "@deploy_server_model\n",
     "def copy_server_model_to_clients(server_flex_model: FlexModel):\n",
@@ -173,13 +190,11 @@
    "source": [
     "from flex.data import Dataset\n",
     "\n",
+    "\n",
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    X, y = client_data.to_numpy()\n",
-    "    client_flex_model[\"model\"].fit(X, \n",
-    "                                    y,\n",
-    "                                    epochs=5,\n",
-    "                                    batch_size=512,\n",
-    "                                    verbose=False)\n",
+    "    client_flex_model[\"model\"].fit(X, y, epochs=5, batch_size=512, verbose=False)\n",
+    "\n",
     "\n",
     "selected_clients.map(train)"
    ]
@@ -200,9 +215,11 @@
    "source": [
     "from flex.pool import collect_clients_weights\n",
     "\n",
+    "\n",
     "@collect_clients_weights\n",
     "def get_clients_weights(client_flex_model: FlexModel):\n",
     "    return client_flex_model[\"model\"].get_weights()\n",
+    "\n",
     "\n",
     "aggregators.map(get_clients_weights, selected_clients)"
    ]
@@ -224,16 +241,20 @@
     "from flex.pool import aggregate_weights\n",
     "import tensorly as tl\n",
     "\n",
-    "tl.set_backend('tensorflow')\n",
+    "tl.set_backend(\"tensorflow\")\n",
+    "\n",
     "\n",
     "@aggregate_weights\n",
     "def aggregate_with_fedavg(list_of_weights: list):\n",
     "    agg_weights = []\n",
     "    for layer_index in range(len(list_of_weights[0])):\n",
-    "        weights_per_layer = tl.stack([weights[layer_index] for weights in list_of_weights])\n",
+    "        weights_per_layer = tl.stack(\n",
+    "            [weights[layer_index] for weights in list_of_weights]\n",
+    "        )\n",
     "        agg_layer = tl.mean(weights_per_layer, axis=0)\n",
     "        agg_weights.append(agg_layer)\n",
     "    return agg_weights\n",
+    "\n",
     "\n",
     "# Aggregate weights\n",
     "aggregators.map(aggregate_with_fedavg)"
@@ -255,9 +276,11 @@
    "source": [
     "from flex.pool import set_aggregated_weights\n",
     "\n",
+    "\n",
     "@set_aggregated_weights\n",
     "def set_agreggated_weights_to_server(server_flex_model: FlexModel, aggregated_weights):\n",
-    "    server_flex_model[\"model\"].set_weights(aggregated_weights) \n",
+    "    server_flex_model[\"model\"].set_weights(aggregated_weights)\n",
+    "\n",
     "\n",
     "aggregators.map(set_agreggated_weights_to_server, servers)"
    ]
@@ -280,6 +303,7 @@
     "    X, y = test_data.to_numpy()\n",
     "    return server_flex_model[\"model\"].evaluate(X, y, verbose=False)\n",
     "\n",
+    "\n",
     "metrics = servers.map(evaluate_global_model)\n",
     "print(metrics[0])"
    ]
@@ -300,8 +324,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model)\n",
+    "def train_n_rounds(n_rounds, clients_per_round=20):\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model\n",
+    "    )\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
