--- a/notebooks/Federated Text Classifcation PT using Hugginface dataset and trainer.ipynb
+++ b/notebooks/Federated Text Classifcation PT using Hugginface dataset and trainer.ipynb
@@ -64,7 +64,9 @@
    "source": [
     "from datasets.load import load_dataset\n",
     "\n",
-    "ag_news_dataset = load_dataset('imdb', split=['train', 'test']) # Get the dataset from huggingface library"
+    "ag_news_dataset = load_dataset(\n",
+    "    \"imdb\", split=[\"train\", \"test\"]\n",
+    ")  # Get the dataset from huggingface library"
    ]
   },
   {
@@ -113,12 +115,16 @@
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
     "config.n_nodes = 2\n",
-    "config.replacement = False # ensure that clients do not share any data\n",
-    "config.node_ids = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FedDataDistribution.from_config_with_huggingface_dataset(data=train_examples, config=config, X_columns=['text'], label_columns=['label'])\n",
+    "config.replacement = False  # ensure that clients do not share any data\n",
+    "config.node_ids = [\"client1\", \"client2\"]  # Optional\n",
+    "flex_dataset = FedDataDistribution.from_config_with_huggingface_dataset(\n",
+    "    data=train_examples, config=config, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")\n",
     "# Assign test data to server_id\n",
     "server_id = \"server\"\n",
-    "flex_dataset[server_id] = Dataset.from_huggingface_dataset(test_examples, X_columns=['text'], label_columns=['label'])"
+    "flex_dataset[server_id] = Dataset.from_huggingface_dataset(\n",
+    "    test_examples, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")"
    ]
   },
   {
@@ -150,13 +156,18 @@
     "from flex.pool.decorators import init_server_model\n",
     "from flex.pool.decorators import deploy_server_model\n",
     "\n",
+    "\n",
     "@init_server_model\n",
     "def define_model(*args):\n",
     "    flex_model = FlexModel()\n",
     "    tokenizer = AutoTokenizer.from_pretrained(TRANSFORMER_MODEL)\n",
-    "    model =  AutoModelForSequenceClassification.from_pretrained(TRANSFORMER_MODEL, num_labels=2)\n",
-    "    flex_model['model'] = model.to(device)\n",
-    "    flex_model['tokenizer_f'] = lambda texts: tokenizer(texts, padding=\"max_length\", truncation=True)\n",
+    "    model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "        TRANSFORMER_MODEL, num_labels=2\n",
+    "    )\n",
+    "    flex_model[\"model\"] = model.to(device)\n",
+    "    flex_model[\"tokenizer_f\"] = lambda texts: tokenizer(\n",
+    "        texts, padding=\"max_length\", truncation=True\n",
+    "    )\n",
     "\n",
     "    return flex_model"
    ]
@@ -169,7 +180,9 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=define_model)"
+    "flex_pool = FlexPool.client_server_pool(\n",
+    "    fed_dataset=flex_dataset, server_id=server_id, init_func=define_model\n",
+    ")"
    ]
   },
   {
@@ -202,9 +215,11 @@
    "source": [
     "import copy\n",
     "\n",
+    "\n",
     "@deploy_server_model\n",
     "def copy_server_model_to_clients(server_flex_model: FlexModel):\n",
     "    return copy.deepcopy(server_flex_model)\n",
+    "\n",
     "\n",
     "server.map(copy_server_model_to_clients, clients)"
    ]
@@ -223,8 +238,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create custom class\n",
+    "# Create custom class\n",
     "from torch.utils.data import Dataset as TorchDataset\n",
+    "\n",
     "\n",
     "class IMDbDataset(TorchDataset):\n",
     "    def __init__(self, encodings, labels) -> None:\n",
@@ -233,7 +249,7 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        item = {key: torch.tensor(val[idx]) for key, val in self.encodings.items()}\n",
-    "        item['labels'] = torch.tensor(self.labels[idx])\n",
+    "        item[\"labels\"] = torch.tensor(self.labels[idx])\n",
     "        return item\n",
     "\n",
     "    def __len__(self):\n",
@@ -263,22 +279,25 @@
     "\n",
     "\n",
     "def train_pt(client_flex_model: FlexModel, client_data: Dataset):\n",
-    "    X_data = client_flex_model['tokenizer_f'](client_data.X_data.tolist())\n",
+    "    X_data = client_flex_model[\"tokenizer_f\"](client_data.X_data.tolist())\n",
     "    imdb_dataset = IMDbDataset(X_data, client_data.y_data)\n",
     "    training_args = TrainingArguments(\n",
-    "        output_dir='./results',          # output directory\n",
-    "        num_train_epochs=1,              # total number of training epochs\n",
+    "        output_dir=\"./results\",  # output directory\n",
+    "        num_train_epochs=1,  # total number of training epochs\n",
     "        per_device_train_batch_size=16,  # batch size per device during training\n",
-    "        per_device_eval_batch_size=64,   # batch size for evaluation\n",
-    "        warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
+    "        per_device_eval_batch_size=64,  # batch size for evaluation\n",
+    "        warmup_steps=500,  # number of warmup steps for learning rate scheduler\n",
     "        use_mps_device=True if device == \"mps\" else False,\n",
     "    )\n",
     "    trainer = Trainer(\n",
-    "        model=client_flex_model['model'],   # the instantiated 🤗 Transformers model to be trained\n",
-    "        args=training_args,                 # training arguments, defined above\n",
-    "        train_dataset=imdb_dataset,         # training dataset\n",
+    "        model=client_flex_model[\n",
+    "            \"model\"\n",
+    "        ],  # the instantiated 🤗 Transformers model to be trained\n",
+    "        args=training_args,  # training arguments, defined above\n",
+    "        train_dataset=imdb_dataset,  # training dataset\n",
     "    )\n",
     "    trainer.train()\n",
+    "\n",
     "\n",
     "clients.map(train_pt)"
    ]
@@ -297,7 +316,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives_pt import collect_clients_weights_pt, set_aggregated_weights_pt"
+    "from flex.pool.primitives_pt import (\n",
+    "    collect_clients_weights_pt,\n",
+    "    set_aggregated_weights_pt,\n",
+    ")"
    ]
   },
   {
@@ -361,9 +383,14 @@
    "source": [
     "import evaluate\n",
     "\n",
+    "\n",
     "def evaluate_global_model(server_flex_model: FlexModel, test_data: Dataset):\n",
-    "    X_data = server_flex_model['tokenizer_f'](test_data.X_data.tolist()[:100]) # Using subset, for testing purposes.\n",
-    "    imdb_dataset = IMDbDataset(X_data, test_data.y_data[:100]) # Using subset, for testing purposes.\n",
+    "    X_data = server_flex_model[\"tokenizer_f\"](\n",
+    "        test_data.X_data.tolist()[:100]\n",
+    "    )  # Using subset, for testing purposes.\n",
+    "    imdb_dataset = IMDbDataset(\n",
+    "        X_data, test_data.y_data[:100]\n",
+    "    )  # Using subset, for testing purposes.\n",
     "    metric = evaluate.load(\"accuracy\")\n",
     "    imdb_dataloader = DataLoader(imdb_dataset, batch_size=1, shuffle=False)\n",
     "    model = server_flex_model[\"model\"].to(device)\n",
@@ -399,7 +426,9 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, clients_per_round=2):\n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=define_model)\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset, server_id=server_id, init_func=define_model\n",
+    "    )\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
