--- a/notebooks/Federated Text Classification PT using HugginFace dataset.ipynb
+++ b/notebooks/Federated Text Classification PT using HugginFace dataset.ipynb
@@ -65,7 +65,9 @@
    "source": [
     "from datasets.load import load_dataset\n",
     "\n",
-    "ag_news_dataset = load_dataset('imdb', split=['train', 'test']) # Get the dataset from huggingface library"
+    "ag_news_dataset = load_dataset(\n",
+    "    \"imdb\", split=[\"train\", \"test\"]\n",
+    ")  # Get the dataset from huggingface library"
    ]
   },
   {
@@ -114,13 +116,17 @@
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
     "config.n_nodes = 2\n",
-    "config.replacement = False # ensure that clients do not share any data\n",
-    "config.node_ids = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FedDataDistribution.from_config_with_huggingface_dataset(data=train_examples, config=config, X_columns=['text'], label_columns=['label'])\n",
+    "config.replacement = False  # ensure that clients do not share any data\n",
+    "config.node_ids = [\"client1\", \"client2\"]  # Optional\n",
+    "flex_dataset = FedDataDistribution.from_config_with_huggingface_dataset(\n",
+    "    data=train_examples, config=config, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")\n",
     "\n",
     "# Assign test data to server_id\n",
     "server_id = \"server\"\n",
-    "flex_dataset[server_id] = Dataset.from_huggingface_dataset(test_examples, X_columns=['text'], label_columns=['label'])"
+    "flex_dataset[server_id] = Dataset.from_huggingface_dataset(\n",
+    "    test_examples, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")"
    ]
   },
   {
@@ -154,17 +160,20 @@
     "\n",
     "from torch.optim import AdamW\n",
     "\n",
+    "\n",
     "@init_server_model\n",
     "def define_model(*args):\n",
     "    flex_model = FlexModel()\n",
     "    tokenizer = AutoTokenizer.from_pretrained(TRANSFORMER_MODEL)\n",
-    "    model =  AutoModelForSequenceClassification.from_pretrained(TRANSFORMER_MODEL, num_labels=2)\n",
-    "    flex_model['model'] = model.to(device)\n",
-    "    flex_model['tokenize_f'] = lambda texts: tokenizer(texts, padding=\"max_length\", truncation=True)\n",
+    "    model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "        TRANSFORMER_MODEL, num_labels=2\n",
+    "    )\n",
+    "    flex_model[\"model\"] = model.to(device)\n",
+    "    flex_model[\"tokenize_f\"] = lambda texts: tokenizer(\n",
+    "        texts, padding=\"max_length\", truncation=True\n",
+    "    )\n",
     "    flex_model[\"optimizer\"] = AdamW\n",
-    "    flex_model[\"optimizer_kwargs\"] = {\n",
-    "        \"lr\": 5e-5\n",
-    "    }\n",
+    "    flex_model[\"optimizer_kwargs\"] = {\"lr\": 5e-5}\n",
     "    return flex_model"
    ]
   },
@@ -176,7 +185,9 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=define_model)"
+    "flex_pool = FlexPool.client_server_pool(\n",
+    "    fed_dataset=flex_dataset, server_id=server_id, init_func=define_model\n",
+    ")"
    ]
   },
   {
@@ -209,9 +220,11 @@
    "source": [
     "import copy\n",
     "\n",
+    "\n",
     "@deploy_server_model\n",
     "def copy_server_model_to_clients(server_flex_model: FlexModel):\n",
     "    return copy.deepcopy(server_flex_model)\n",
+    "\n",
     "\n",
     "server.map(copy_server_model_to_clients, clients)"
    ]
@@ -230,8 +243,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create custom class\n",
+    "# Create custom class\n",
     "from torch.utils.data import Dataset as TorchDataset\n",
+    "\n",
     "\n",
     "class IMDbDataset(TorchDataset):\n",
     "    def __init__(self, encodings, labels) -> None:\n",
@@ -240,7 +254,7 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        item = {key: torch.tensor(val[idx]) for key, val in self.encodings.items()}\n",
-    "        item['labels'] = torch.tensor(self.labels[idx])\n",
+    "        item[\"labels\"] = torch.tensor(self.labels[idx])\n",
     "        return item\n",
     "\n",
     "    def __len__(self):\n",
@@ -267,23 +281,27 @@
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
     "\n",
+    "\n",
     "def train_native_pt(client_flex_model: FlexModel, client_data: Dataset):\n",
-    "    X_data = client_flex_model['tokenize_f'](client_data.X_data.tolist())\n",
+    "    X_data = client_flex_model[\"tokenize_f\"](client_data.X_data.tolist())\n",
     "    imdb_dataset = IMDbDataset(X_data, client_data.y_data)\n",
     "    imdb_loader = DataLoader(imdb_dataset, shuffle=True, batch_size=16)\n",
     "    model = client_flex_model[\"model\"].to(device)\n",
-    "    optimizer = client_flex_model[\"optimizer\"](model.parameters(), **client_flex_model[\"optimizer_kwargs\"])\n",
+    "    optimizer = client_flex_model[\"optimizer\"](\n",
+    "        model.parameters(), **client_flex_model[\"optimizer_kwargs\"]\n",
+    "    )\n",
     "    num_epochs = 3\n",
     "    for _ in range(num_epochs):\n",
     "        for batch in tqdm(imdb_loader):\n",
     "            optimizer.zero_grad()\n",
-    "            input_ids = batch['input_ids'].to(device)\n",
-    "            attention_mask = batch['attention_mask'].to(device)\n",
-    "            labels = batch['labels'].to(device)\n",
+    "            input_ids = batch[\"input_ids\"].to(device)\n",
+    "            attention_mask = batch[\"attention_mask\"].to(device)\n",
+    "            labels = batch[\"labels\"].to(device)\n",
     "            outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
     "            loss = outputs[0]\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "\n",
     "\n",
     "clients.map(train_native_pt)"
    ]
@@ -302,7 +320,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives_pt import collect_clients_weights_pt, set_aggregated_weights_pt"
+    "from flex.pool.primitives_pt import (\n",
+    "    collect_clients_weights_pt,\n",
+    "    set_aggregated_weights_pt,\n",
+    ")"
    ]
   },
   {
@@ -366,12 +387,15 @@
    "source": [
     "import evaluate\n",
     "\n",
+    "\n",
     "def evaluate_global_model(server_flex_model: FlexModel, test_data: Dataset):\n",
-    "    X_data = server_flex_model['tokenize_f'](test_data.X_data.tolist()[:100])\n",
-    "    imdb_dataset = IMDbDataset(X_data, test_data.y_data[:100]) # Using subset, for testing purposes.\n",
+    "    X_data = server_flex_model[\"tokenize_f\"](test_data.X_data.tolist()[:100])\n",
+    "    imdb_dataset = IMDbDataset(\n",
+    "        X_data, test_data.y_data[:100]\n",
+    "    )  # Using subset, for testing purposes.\n",
     "    metric = evaluate.load(\"accuracy\")\n",
     "    imdb_dataloader = DataLoader(imdb_dataset, batch_size=1, shuffle=False)\n",
-    "    model = server_flex_model['model']\n",
+    "    model = server_flex_model[\"model\"]\n",
     "    model.eval()\n",
     "    for batch in imdb_dataloader:\n",
     "        batch = {k: v.to(device) for k, v in batch.items()}\n",
@@ -382,6 +406,7 @@
     "        predictions = torch.argmax(logits, dim=-1)\n",
     "        metric.add_batch(predictions=predictions, references=batch[\"labels\"])\n",
     "    print(f\"Results: {metric.compute()}\")\n",
+    "\n",
     "\n",
     "server.map(evaluate_global_model)"
    ]
@@ -403,7 +428,9 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, clients_per_round=2):\n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=define_model)\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset, server_id=server_id, init_func=define_model\n",
+    "    )\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
