--- a/notebooks/Federated Text Classification TF example low-level.ipynb
+++ b/notebooks/Federated Text Classification TF example low-level.ipynb
@@ -43,7 +43,9 @@
     "print(\"Version: \", tf.__version__)\n",
     "print(\"Eager mode: \", tf.executing_eagerly())\n",
     "print(\"Hub version: \", hub.__version__)\n",
-    "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")"
+    "print(\n",
+    "    \"GPU is\", \"available\" if tf.config.list_physical_devices(\"GPU\") else \"NOT AVAILABLE\"\n",
+    ")"
    ]
   },
   {
@@ -93,7 +95,9 @@
    "source": [
     "from flex.data import Dataset\n",
     "\n",
-    "flex_data = Dataset.from_tfds_text_dataset(train_data, X_columns=['text'], label_columns=['label'])"
+    "flex_data = Dataset.from_tfds_text_dataset(\n",
+    "    train_data, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")"
    ]
   },
   {
@@ -114,13 +118,17 @@
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
     "config.n_nodes = 2\n",
-    "config.replacement = False # ensure that clients do not share any data\n",
-    "config.node_ids = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FedDataDistribution.from_config(centralized_data=flex_data, config=config)\n",
+    "config.replacement = False  # ensure that clients do not share any data\n",
+    "config.node_ids = [\"client1\", \"client2\"]  # Optional\n",
+    "flex_dataset = FedDataDistribution.from_config(\n",
+    "    centralized_data=flex_data, config=config\n",
+    ")\n",
     "\n",
     "# Assign test data to server_id\n",
     "server_id = \"server\"\n",
-    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])"
+    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(\n",
+    "    test_data, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")"
    ]
   },
   {
@@ -142,7 +150,9 @@
     "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_nodes=2)\n",
     "# Assign test data to server_id\n",
     "server_id = \"server\"\n",
-    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])"
+    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(\n",
+    "    test_data, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")"
    ]
   },
   {
@@ -175,11 +185,13 @@
     "    hub_layer = hub.KerasLayer(model, input_shape=[], dtype=tf.string, trainable=True)\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(hub_layer)\n",
-    "    model.add(tf.keras.layers.Dense(16, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dense(16, activation=\"relu\"))\n",
     "    model.add(tf.keras.layers.Dense(1))\n",
-    "    model.compile(optimizer='adam',\n",
-    "                    loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
-    "                    metrics=[tf.metrics.BinaryAccuracy(threshold=0.0, name='accuracy')])\n",
+    "    model.compile(\n",
+    "        optimizer=\"adam\",\n",
+    "        loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
+    "        metrics=[tf.metrics.BinaryAccuracy(threshold=0.0, name=\"accuracy\")],\n",
+    "    )\n",
     "    return model"
    ]
   },
@@ -190,6 +202,7 @@
    "outputs": [],
    "source": [
     "from flex.model import FlexModel\n",
+    "\n",
     "\n",
     "def initialize_server_model(server_flex_model: FlexModel, _):\n",
     "    print(\"Initializing server model.\")\n",
@@ -208,7 +221,9 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=initialize_server_model)\n",
+    "flex_pool = FlexPool.client_server_pool(\n",
+    "    fed_dataset=flex_dataset, server_id=server_id, init_func=initialize_server_model\n",
+    ")\n",
     "clients = flex_pool.clients\n",
     "server = flex_pool.servers\n",
     "print(f\"Server node is indentified by {server.actor_ids}\")\n",
@@ -231,6 +246,7 @@
    "source": [
     "def deploy_model_to_clients(server_flex_model, clients_model, *args, **kwargs):\n",
     "    from flex.model import FlexModel\n",
+    "\n",
     "    for client in clients_model:\n",
     "        weights = server_flex_model[\"model\"].get_weights()\n",
     "        model = tf.keras.models.clone_model(server_flex_model[\"model\"])\n",
@@ -241,7 +257,7 @@
     "            metrics=server_flex_model[\"metrics\"],\n",
     "        )\n",
     "        client_flex_model = FlexModel()\n",
-    "        client_flex_model['model'] = model\n",
+    "        client_flex_model[\"model\"] = model\n",
     "        clients_model[client].update(client_flex_model)"
    ]
   },
@@ -296,7 +312,7 @@
    "source": [
     "def train(client_model, client_data, batch_size=256, epochs=1):\n",
     "    print(\"Training model at client.\")\n",
-    "    model = client_model['model']\n",
+    "    model = client_model[\"model\"]\n",
     "    X_data, y_data = client_data.to_numpy()\n",
     "    model.fit(X_data, y_data, epochs=epochs, batch_size=batch_size, verbose=0)"
    ]
@@ -346,11 +362,11 @@
    "source": [
     "def collect_weights(aggregator_model, clients_model):\n",
     "    print(\"Collecting weights.\")\n",
-    "    if 'weights' not in aggregator_model:\n",
-    "        aggregator_model['weights'] = []\n",
+    "    if \"weights\" not in aggregator_model:\n",
+    "        aggregator_model[\"weights\"] = []\n",
     "    for k in clients_model:\n",
-    "        client_weights = clients_model[k]['model'].get_weights()\n",
-    "        aggregator_model['weights'].append(client_weights)"
+    "        client_weights = clients_model[k][\"model\"].get_weights()\n",
+    "        aggregator_model[\"weights\"].append(client_weights)"
    ]
   },
   {
@@ -378,7 +394,7 @@
    "source": [
     "def aggregate_weights(agg_model, *args):\n",
     "    print(\"Aggregating weights\")\n",
-    "    averaged_weights = np.mean(np.array(agg_model['weights'], dtype=object), axis=0)\n",
+    "    averaged_weights = np.mean(np.array(agg_model[\"weights\"], dtype=object), axis=0)\n",
     "    agg_model[\"model\"].set_weights(averaged_weights)\n",
     "    agg_model[\"weights\"] = []"
    ]
@@ -408,9 +424,9 @@
    "source": [
     "def deploy_global_model_to_clients(server_model, clients_models, *args, **kwargs):\n",
     "    print(\"Deploying the global model on the clients.\")\n",
-    "    aggregated_weights = server_model['model'].get_weights()\n",
+    "    aggregated_weights = server_model[\"model\"].get_weights()\n",
     "    for client_model in clients_models:\n",
-    "        clients_models[client_model]['model'].set_weights(aggregated_weights)"
+    "        clients_models[client_model][\"model\"].set_weights(aggregated_weights)"
    ]
   },
   {
@@ -477,7 +493,9 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):\n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=initialize_server_model)\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset, server_id=server_id, init_func=initialize_server_model\n",
+    "    )\n",
     "    pool.servers.map(deploy_model_to_clients, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
