--- a/notebooks/Federated Text Classification TF with simplified primitives.ipynb
+++ b/notebooks/Federated Text Classification TF with simplified primitives.ipynb
@@ -34,7 +34,9 @@
     "print(\"Version: \", tf.__version__)\n",
     "print(\"Eager mode: \", tf.executing_eagerly())\n",
     "print(\"Hub version: \", hub.__version__)\n",
-    "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")"
+    "print(\n",
+    "    \"GPU is\", \"available\" if tf.config.list_physical_devices(\"GPU\") else \"NOT AVAILABLE\"\n",
+    ")"
    ]
   },
   {
@@ -56,7 +58,9 @@
    "source": [
     "from flex.data import Dataset\n",
     "\n",
-    "flex_data = Dataset.from_tfds_text_dataset(train_data, X_columns=['text'], label_columns=['label'])"
+    "flex_data = Dataset.from_tfds_text_dataset(\n",
+    "    train_data, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")"
    ]
   },
   {
@@ -69,9 +73,11 @@
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
     "config.n_nodes = 2\n",
-    "config.replacement = False # ensure that clients do not share any data\n",
-    "config.node_ids = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FedDataDistribution.from_config(centralized_data=flex_data, config=config)"
+    "config.replacement = False  # ensure that clients do not share any data\n",
+    "config.node_ids = [\"client1\", \"client2\"]  # Optional\n",
+    "flex_dataset = FedDataDistribution.from_config(\n",
+    "    centralized_data=flex_data, config=config\n",
+    ")"
    ]
   },
   {
@@ -85,7 +91,9 @@
     "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_nodes=2)\n",
     "# Assign test data to server_id\n",
     "server_id = \"server\"\n",
-    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])"
+    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(\n",
+    "    test_data, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")"
    ]
   },
   {
@@ -116,18 +124,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Defining the model\n",
+    "# Defining the model\n",
+    "\n",
     "\n",
     "def define_model(**kargs):\n",
     "    model = \"https://tfhub.dev/google/nnlm-en-dim50/2\"\n",
     "    hub_layer = hub.KerasLayer(model, input_shape=[], dtype=tf.string, trainable=True)\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(hub_layer)\n",
-    "    model.add(tf.keras.layers.Dense(16, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dense(16, activation=\"relu\"))\n",
     "    model.add(tf.keras.layers.Dense(1))\n",
-    "    model.compile(optimizer='adam',\n",
-    "                    loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
-    "                    metrics=[tf.metrics.BinaryAccuracy(threshold=0.0, name='accuracy')])\n",
+    "    model.compile(\n",
+    "        optimizer=\"adam\",\n",
+    "        loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
+    "        metrics=[tf.metrics.BinaryAccuracy(threshold=0.0, name=\"accuracy\")],\n",
+    "    )\n",
     "    return model"
    ]
   },
@@ -148,7 +159,12 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=init_server_model_tf, model=define_model())"
+    "flex_pool = FlexPool.client_server_pool(\n",
+    "    fed_dataset=flex_dataset,\n",
+    "    server_id=server_id,\n",
+    "    init_func=init_server_model_tf,\n",
+    "    model=define_model(),\n",
+    ")"
    ]
   },
   {
@@ -187,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator = flex_pool.aggregators\n"
+    "aggregator = flex_pool.aggregators"
    ]
   },
   {
@@ -248,8 +264,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_n_rounds(n_rounds, batch_size, epochs):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=init_server_model_tf, model=define_model())\n",
+    "def train_n_rounds(n_rounds, batch_size, epochs):\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset,\n",
+    "        server_id=server_id,\n",
+    "        init_func=init_server_model_tf,\n",
+    "        model=define_model(),\n",
+    "    )\n",
     "    pool.servers.map(deploy_server_model_tf, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
