--- a/notebooks/Federating a clustering model.ipynb
+++ b/notebooks/Federating a clustering model.ipynb
@@ -29,7 +29,9 @@
     "\n",
     "iris = load_iris()\n",
     "# Generate train-test splits\n",
-    "X_train, X_test, y_train, y_test = train_test_split(iris.data, iris.target, test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    iris.data, iris.target, test_size=0.33, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -74,21 +76,27 @@
     "from sklearn.cluster import KMeans\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "def plot_k_means(km, test_data, title):\n",
-    "    preds=km.predict(test_data)\n",
-    "    fig, axes=plt.subplots(1, 2, figsize=(13,6))\n",
+    "    preds = km.predict(test_data)\n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(13, 6))\n",
     "    fig.suptitle(title, fontsize=16)\n",
     "    axes[0].scatter(test_data[:, 0], test_data[:, 1], c=preds)\n",
-    "    axes[0].set_xlabel('Sepal length')\n",
-    "    axes[0].set_ylabel('Sepal width')\n",
-    "    \n",
+    "    axes[0].set_xlabel(\"Sepal length\")\n",
+    "    axes[0].set_ylabel(\"Sepal width\")\n",
+    "\n",
     "    axes[1].scatter(test_data[:, 2], test_data[:, 3], c=preds)\n",
-    "    axes[1].set_xlabel('Petal length')\n",
-    "    axes[1].set_ylabel('Petal width')\n",
-    "    \n",
+    "    axes[1].set_xlabel(\"Petal length\")\n",
+    "    axes[1].set_ylabel(\"Petal width\")\n",
+    "\n",
+    "\n",
     "centralized_model = KMeans(n_clusters=3)\n",
     "centralized_model.fit(train_iris.X_data.to_numpy())\n",
-    "plot_k_means(centralized_model, test_iris.X_data.to_numpy(), title=\"Benchmark: K-means using centralized data\")"
+    "plot_k_means(\n",
+    "    centralized_model,\n",
+    "    test_iris.X_data.to_numpy(),\n",
+    "    title=\"Benchmark: K-means using centralized data\",\n",
+    ")"
    ]
   },
   {
@@ -99,19 +107,29 @@
    "source": [
     "from sklearn import metrics\n",
     "\n",
+    "\n",
     "def score_model(labels, preds):\n",
-    "    \n",
     "    homogeneity_score = metrics.homogeneity_score(labels, preds)\n",
     "    completeness_score = metrics.completeness_score(labels, preds)\n",
     "    v_measure_score = metrics.v_measure_score(labels, preds)\n",
     "    adjusted_rand_score = metrics.adjusted_rand_score(labels, preds)\n",
     "\n",
-    "    results = homogeneity_score, completeness_score, v_measure_score, adjusted_rand_score\n",
-    "    \n",
+    "    results = (\n",
+    "        homogeneity_score,\n",
+    "        completeness_score,\n",
+    "        v_measure_score,\n",
+    "        adjusted_rand_score,\n",
+    "    )\n",
+    "\n",
     "    print(\"-------------------------------------\")\n",
-    "    print(\"Homogeneity: {},\\nCompleteness: {},\\nV-measure: {},\\nRand index (adjusted): {}\".format(*results))\n",
+    "    print(\n",
+    "        \"Homogeneity: {},\\nCompleteness: {},\\nV-measure: {},\\nRand index (adjusted): {}\".format(\n",
+    "            *results\n",
+    "        )\n",
+    "    )\n",
     "    print(\"-----------------------------------\")\n",
-    "    \n",
+    "\n",
+    "\n",
     "print(\"Centralized model scores\")\n",
     "preds = centralized_model.predict(test_iris.X_data)\n",
     "score_model(test_iris.y_data, preds)"
@@ -166,7 +184,9 @@
     "servers = p.servers\n",
     "aggregators = p.aggregators\n",
     "\n",
-    "print(f\"Number of nodes in the pool {len(p)}: {len(servers)} servers plus {len(clients)} clients. The server is also an aggregator\")"
+    "print(\n",
+    "    f\"Number of nodes in the pool {len(p)}: {len(servers)} servers plus {len(clients)} clients. The server is also an aggregator\"\n",
+    ")"
    ]
   },
   {
@@ -187,9 +207,11 @@
     "\n",
     "from flex.pool import deploy_server_model\n",
     "\n",
+    "\n",
     "@deploy_server_model\n",
     "def copy_server_model_to_clients(server_flex_model: FlexModel):\n",
     "    return copy.deepcopy(server_flex_model)\n",
+    "\n",
     "\n",
     "servers.map(copy_server_model_to_clients, clients)"
    ]
@@ -211,6 +233,7 @@
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    client_flex_model[\"model\"].fit(client_data.X_data)\n",
     "\n",
+    "\n",
     "clients.map(train)"
    ]
   },
@@ -230,9 +253,11 @@
    "source": [
     "from flex.pool import collect_clients_weights\n",
     "\n",
+    "\n",
     "@collect_clients_weights\n",
     "def get_clients_weights(client_flex_model: FlexModel):\n",
     "    return client_flex_model[\"model\"].cluster_centers_\n",
+    "\n",
     "\n",
     "aggregators.map(get_clients_weights, clients)\n",
     "# The same as:\n",
@@ -258,6 +283,7 @@
     "from flex.pool import aggregate_weights\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "@aggregate_weights\n",
     "def aggregate(list_of_weights: list):\n",
     "    weight_arr = np.concatenate(list_of_weights)\n",
@@ -265,6 +291,7 @@
     "    model_aggregator = KMeans(n_clusters=n_clusters)\n",
     "    model_aggregator.fit(weight_arr)\n",
     "    return model_aggregator.cluster_centers_\n",
+    "\n",
     "\n",
     "# Aggregate weights\n",
     "aggregators.map(aggregate)\n",
@@ -288,9 +315,11 @@
    "source": [
     "from flex.pool import set_aggregated_weights\n",
     "\n",
+    "\n",
     "@set_aggregated_weights\n",
     "def set_agreggated_weights_to_server(server_flex_model: FlexModel, aggregated_weights):\n",
     "    server_flex_model[\"model\"].cluster_centers_ = aggregated_weights\n",
+    "\n",
     "\n",
     "# Set aggregated weights in the server model\n",
     "aggregators.map(set_agreggated_weights_to_server, servers)\n",
@@ -317,6 +346,7 @@
     "    preds = server_flex_model[\"model\"].predict(x)\n",
     "    plot_k_means(server_flex_model[\"model\"], x, title=\"K-means using federated data\")\n",
     "    score_model(y, preds)\n",
+    "\n",
     "\n",
     "servers.map(evaluate_global_model)"
    ]
