--- a/notebooks/Federating data with FLEXible.ipynb
+++ b/notebooks/Federating data with FLEXible.ipynb
@@ -21,8 +21,8 @@
     "import tensorflow_datasets as tfds\n",
     "\n",
     "ds_train, ds_test = tfds.load(\n",
-    "    'mnist',\n",
-    "    split=['train', 'test'],\n",
+    "    \"mnist\",\n",
+    "    split=[\"train\", \"test\"],\n",
     "    shuffle_files=True,\n",
     "    as_supervised=True,\n",
     "    batch_size=-1,\n",
@@ -118,11 +118,15 @@
     "from flex.data import FedDatasetConfig\n",
     "import numpy as np\n",
     "\n",
-    "config = FedDatasetConfig(seed = 0) # We fix a seed to make our federation reproducible\n",
-    "config.n_nodes = 10 # 10 clients\n",
-    "config.replacement = False # ensure that clients do not share any data\n",
-    "config.labels_per_node = [[i] for i in np.unique(train_dataset.y_data)] # assign each client one class\n",
-    "config.weights = [0.2] * config.n_nodes # each client has only 20% of its assigned class"
+    "config = FedDatasetConfig(seed=0)  # We fix a seed to make our federation reproducible\n",
+    "config.n_nodes = 10  # 10 clients\n",
+    "config.replacement = False  # ensure that clients do not share any data\n",
+    "config.labels_per_node = [\n",
+    "    [i] for i in np.unique(train_dataset.y_data)\n",
+    "]  # assign each client one class\n",
+    "config.weights = [\n",
+    "    0.2\n",
+    "] * config.n_nodes  # each client has only 20% of its assigned class"
    ]
   },
   {
@@ -150,7 +154,9 @@
    "source": [
     "from flex.data import FedDataDistribution\n",
     "\n",
-    "federated_dataset = FedDataDistribution.from_config(centralized_data=train_dataset, config=config)"
+    "federated_dataset = FedDataDistribution.from_config(\n",
+    "    centralized_data=train_dataset, config=config\n",
+    ")"
    ]
   },
   {
@@ -170,12 +176,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "for client in federated_dataset:\n",
-    "    print(f\"Node {client} has class {np.unique(federated_dataset[client].y_data)} and {len(federated_dataset[client])} elements, a sample of them is:\")\n",
-    "    #pyplot.figure(figsize = (1,10))\n",
-    "    fig, ax = plt.subplots(1, 10) # rows, cols\n",
-    "    for i ,(x, y) in enumerate(federated_dataset[client]):\n",
-    "        ax[i].axis('off')\n",
-    "        ax[i].imshow(x, cmap=plt.get_cmap('gray'))\n",
+    "    print(\n",
+    "        f\"Node {client} has class {np.unique(federated_dataset[client].y_data)} and {len(federated_dataset[client])} elements, a sample of them is:\"\n",
+    "    )\n",
+    "    # pyplot.figure(figsize = (1,10))\n",
+    "    fig, ax = plt.subplots(1, 10)  # rows, cols\n",
+    "    for i, (x, y) in enumerate(federated_dataset[client]):\n",
+    "        ax[i].axis(\"off\")\n",
+    "        ax[i].imshow(x, cmap=plt.get_cmap(\"gray\"))\n",
     "        if i >= 9:\n",
     "            break\n",
     "    plt.show()"
@@ -201,12 +209,16 @@
     "\n",
     "n_nodes = 500\n",
     "mu, sigma = 100, 1  # mean and standard deviation\n",
-    "normal_weights = np.random.default_rng(seed=0).normal(mu, sigma, n_nodes)  # sample random numbers\n",
-    "normal_weights = np.clip(normal_weights, a_min=0, a_max=np.inf)  # remove negative values\n",
-    "normal_weights = normal_weights / sum(normal_weights) # normalize to sum 1\n",
+    "normal_weights = np.random.default_rng(seed=0).normal(\n",
+    "    mu, sigma, n_nodes\n",
+    ")  # sample random numbers\n",
+    "normal_weights = np.clip(\n",
+    "    normal_weights, a_min=0, a_max=np.inf\n",
+    ")  # remove negative values\n",
+    "normal_weights = normal_weights / sum(normal_weights)  # normalize to sum 1\n",
     "\n",
     "plt.hist(normal_weights, bins=15)\n",
-    "plt.title('Histogram of normal weights')\n",
+    "plt.title(\"Histogram of normal weights\")\n",
     "plt.show()"
    ]
   },
@@ -216,13 +228,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = FedDatasetConfig(seed=0, \n",
-    "                            n_nodes=n_nodes,\n",
-    "                            replacement=False,\n",
-    "                            weights=normal_weights\n",
-    "                        )\n",
+    "config = FedDatasetConfig(\n",
+    "    seed=0, n_nodes=n_nodes, replacement=False, weights=normal_weights\n",
+    ")\n",
     "\n",
-    "normal_federated_dataset = FedDataDistribution.from_config(centralized_data=train_dataset, config=config)"
+    "normal_federated_dataset = FedDataDistribution.from_config(\n",
+    "    centralized_data=train_dataset, config=config\n",
+    ")"
    ]
   },
   {
@@ -239,10 +251,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasizes_per_client = [len(normal_federated_dataset[client]) for client in normal_federated_dataset]\n",
+    "datasizes_per_client = [\n",
+    "    len(normal_federated_dataset[client]) for client in normal_federated_dataset\n",
+    "]\n",
     "n, bins, patches = plt.hist(datasizes_per_client)\n",
-    "plt.ylabel('Data sizes')\n",
-    "plt.title('Histogram of data sizes per client')\n",
+    "plt.ylabel(\"Data sizes\")\n",
+    "plt.title(\"Histogram of data sizes per client\")\n",
     "plt.show()"
    ]
   },
@@ -281,12 +295,7 @@
     "from torchvision import datasets, transforms\n",
     "from flex.data import Dataset\n",
     "\n",
-    "cifar10 = datasets.CIFAR10(\n",
-    "        root=\".\",\n",
-    "        train=True,\n",
-    "        download=True,\n",
-    "        transform=None\n",
-    ")\n",
+    "cifar10 = datasets.CIFAR10(root=\".\", train=True, download=True, transform=None)\n",
     "cifar10_dataset = Dataset.from_torchvision_dataset(cifar10)"
    ]
   },
@@ -309,7 +318,7 @@
     "\n",
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
-    "config.replacement = True # it is not clear whether clients share their data or not\n",
+    "config.replacement = True  # it is not clear whether clients share their data or not\n",
     "config.n_nodes = 10\n",
     "num_classes = 10\n",
     "\n",
@@ -335,7 +344,9 @@
    "source": [
     "from flex.data import FedDataDistribution\n",
     "\n",
-    "personalized_cifar_dataset = FedDataDistribution.from_config(centralized_data=cifar10_dataset, config=config)"
+    "personalized_cifar_dataset = FedDataDistribution.from_config(\n",
+    "    centralized_data=cifar10_dataset, config=config\n",
+    ")"
    ]
   },
   {
@@ -357,13 +368,22 @@
     "unique_classes = np.sort(np.unique(cifar10_dataset.y_data))\n",
     "\n",
     "for i in range(config.n_nodes):\n",
-    "    client_key = i # Autogenerated keys are created as numbers 0...n_nodes\n",
+    "    client_key = i  # Autogenerated keys are created as numbers 0...n_nodes\n",
     "    for j, cifar_class in enumerate(unique_classes):\n",
-    "        indexes = personalized_cifar_dataset[client_key].y_data.to_numpy() == cifar_class\n",
+    "        indexes = (\n",
+    "            personalized_cifar_dataset[client_key].y_data.to_numpy() == cifar_class\n",
+    "        )\n",
     "        number_of_elements_per_class = sum(indexes)\n",
     "        if number_of_elements_per_class != 0:\n",
-    "            total_elements_per_class = np.sum(cifar10_dataset.y_data.to_numpy() == cifar_class)\n",
-    "            print(f\"client id: {client_key}, class {cifar_class}: actual proportion\", number_of_elements_per_class/total_elements_per_class, \"vs. expected proportion:\", config.weights_per_label[i][j])"
+    "            total_elements_per_class = np.sum(\n",
+    "                cifar10_dataset.y_data.to_numpy() == cifar_class\n",
+    "            )\n",
+    "            print(\n",
+    "                f\"client id: {client_key}, class {cifar_class}: actual proportion\",\n",
+    "                number_of_elements_per_class / total_elements_per_class,\n",
+    "                \"vs. expected proportion:\",\n",
+    "                config.weights_per_label[i][j],\n",
+    "            )"
    ]
   },
   {
@@ -385,6 +405,8 @@
     "import numpy as np\n",
     "\n",
     "rng = np.random.default_rng(seed=0)\n",
+    "\n",
+    "\n",
     "def keep_given_labels(client_dataset: Dataset, selected_labels=None):\n",
     "    if not selected_labels:\n",
     "        selected_labels = []\n",
@@ -394,17 +416,21 @@
     "    y_data = y[indexes]\n",
     "    return Dataset.from_numpy(X_data, y_data)\n",
     "\n",
-    "randomly_transformed_federated_dataset = personalized_cifar_dataset.apply(func=keep_given_labels,  # function to apply\n",
-    "                                                num_proc=1,\n",
-    "                                                selected_labels=[0, 2, 4, 6, 8] # argument for function\n",
-    "                                                )\n",
+    "\n",
+    "randomly_transformed_federated_dataset = personalized_cifar_dataset.apply(\n",
+    "    func=keep_given_labels,  # function to apply\n",
+    "    num_proc=1,\n",
+    "    selected_labels=[0, 2, 4, 6, 8],  # argument for function\n",
+    ")\n",
     "\n",
     "for i, client in enumerate(randomly_transformed_federated_dataset):\n",
-    "    print(f\"Client {client} has classes {np.unique(randomly_transformed_federated_dataset[client].y_data)} and {len(randomly_transformed_federated_dataset[client])} elements, a sample of them is:\")\n",
-    "    fig, ax = plt.subplots(1, 10) # rows, cols\n",
-    "    for j ,(x, y) in enumerate(randomly_transformed_federated_dataset[client]):\n",
-    "        ax[j].axis('off')\n",
-    "        ax[j].imshow(x, cmap=plt.get_cmap('gray'))\n",
+    "    print(\n",
+    "        f\"Client {client} has classes {np.unique(randomly_transformed_federated_dataset[client].y_data)} and {len(randomly_transformed_federated_dataset[client])} elements, a sample of them is:\"\n",
+    "    )\n",
+    "    fig, ax = plt.subplots(1, 10)  # rows, cols\n",
+    "    for j, (x, y) in enumerate(randomly_transformed_federated_dataset[client]):\n",
+    "        ax[j].axis(\"off\")\n",
+    "        ax[j].imshow(x, cmap=plt.get_cmap(\"gray\"))\n",
     "        if j >= 9:\n",
     "            break\n",
     "    if i >= 10:\n",
@@ -454,8 +480,8 @@
     "# HuggingFace\n",
     "from datasets import load_dataset\n",
     "\n",
-    "# Load a dataset into a Dataset\n",
-    "dataset_hf = load_dataset('ag_news', split='train')"
+    "# Load a dataset into a Dataset\n",
+    "dataset_hf = load_dataset(\"ag_news\", split=\"train\")"
    ]
   },
   {
@@ -477,18 +503,16 @@
     ")\n",
     "\n",
     "# Create a config and federate the dataset\n",
-    "config_hf = FedDatasetConfig(\n",
-    "    seed=0,\n",
-    "    n_nodes=2,\n",
-    "    replacement=False\n",
-    ")\n",
+    "config_hf = FedDatasetConfig(seed=0, n_nodes=2, replacement=False)\n",
     "\n",
     "\n",
     "flex_dataset_two_step_hf = FedDataDistribution.from_config(\n",
     "    centralized_data=fcd_hf, config=config_hf\n",
     ")\n",
     "\n",
-    "print(f\"Flex dataset two steps a data sample from client_0: {flex_dataset_two_step_hf[0].X_data[0]}\")"
+    "print(\n",
+    "    f\"Flex dataset two steps a data sample from client_0: {flex_dataset_two_step_hf[0].X_data[0]}\"\n",
+    ")"
    ]
   },
   {
@@ -530,8 +554,8 @@
     "import tensorflow_datasets as tfds\n",
     "\n",
     "ds_train, ds_test = tfds.load(\n",
-    "    'mnist',\n",
-    "    split=['train', 'test'],\n",
+    "    \"mnist\",\n",
+    "    split=[\"train\", \"test\"],\n",
     "    shuffle_files=True,\n",
     "    as_supervised=True,\n",
     "    batch_size=-1,\n",
@@ -554,22 +578,18 @@
    "source": [
     "fcd_tf = Dataset.from_tfds_image_dataset(ds_train)\n",
     "\n",
-    "config_tf = FedDatasetConfig(\n",
-    "    seed=0,\n",
-    "    n_nodes=2,\n",
-    "    replacement=False\n",
-    ")\n",
+    "config_tf = FedDatasetConfig(seed=0, n_nodes=2, replacement=False)\n",
     "\n",
     "\n",
-    "# Federate the Dataset we just created\n",
+    "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_tf = FedDataDistribution.from_config(\n",
-    "    centralized_data=fcd_tf,\n",
-    "    config=config_tf\n",
+    "    centralized_data=fcd_tf, config=config_tf\n",
     ")\n",
     "\n",
     "sample = flex_dataset_two_step_tf[0].X_data[0]\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.imshow(sample, cmap=plt.get_cmap('gray'))"
+    "\n",
+    "plt.imshow(sample, cmap=plt.get_cmap(\"gray\"))"
    ]
   },
   {
@@ -590,13 +610,13 @@
    "source": [
     "# Federate the dataset directly\n",
     "flex_dataset_tf = FedDataDistribution.from_config_with_tfds_image_dataset(\n",
-    "    ds_train,\n",
-    "    config_tf\n",
+    "    ds_train, config_tf\n",
     ")\n",
     "\n",
     "sample = flex_dataset_tf[0].X_data[0]\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.imshow(sample, cmap=plt.get_cmap('gray'))"
+    "\n",
+    "plt.imshow(sample, cmap=plt.get_cmap(\"gray\"))"
    ]
   },
   {
@@ -615,12 +635,7 @@
    "source": [
     "from torchvision import datasets, transforms\n",
     "\n",
-    "cifar10 = datasets.CIFAR10(\n",
-    "        root=\".\",\n",
-    "        train=True,\n",
-    "        download=True,\n",
-    "        transform=None\n",
-    ")"
+    "cifar10 = datasets.CIFAR10(root=\".\", train=True, download=True, transform=None)"
    ]
   },
   {
@@ -639,21 +654,17 @@
    "source": [
     "fcd_torch = Dataset.from_torchvision_dataset(cifar10)\n",
     "\n",
-    "config_torch = FedDatasetConfig(\n",
-    "    seed=0,\n",
-    "    n_nodes=2,\n",
-    "    replacement=False\n",
-    ")\n",
+    "config_torch = FedDatasetConfig(seed=0, n_nodes=2, replacement=False)\n",
     "\n",
-    "# Federate the Dataset we just created\n",
+    "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
-    "    centralized_data=fcd_torch,\n",
-    "    config=config_torch\n",
+    "    centralized_data=fcd_torch, config=config_torch\n",
     ")\n",
     "\n",
     "sample = flex_dataset_two_step_torch[0].X_data[0]\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.imshow(sample, cmap=plt.get_cmap('gray'))"
+    "\n",
+    "plt.imshow(sample, cmap=plt.get_cmap(\"gray\"))"
    ]
   },
   {
@@ -672,13 +683,13 @@
    "source": [
     "# Federate the dataset directly\n",
     "flex_dataset_torch = FedDataDistribution.from_config_with_torchvision_dataset(\n",
-    "    cifar10,\n",
-    "    config_tf\n",
+    "    cifar10, config_tf\n",
     ")\n",
     "\n",
     "sample = flex_dataset_torch[0].X_data[0]\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.imshow(sample, cmap=plt.get_cmap('gray'))"
+    "\n",
+    "plt.imshow(sample, cmap=plt.get_cmap(\"gray\"))"
    ]
   },
   {
@@ -697,7 +708,7 @@
    "source": [
     "from torchtext.datasets import AG_NEWS\n",
     "\n",
-    "torch_dataset = AG_NEWS(split='train')"
+    "torch_dataset = AG_NEWS(split=\"train\")"
    ]
   },
   {
@@ -716,17 +727,12 @@
    "source": [
     "fcd_torch = Dataset.from_torchtext_dataset(torch_dataset)\n",
     "\n",
-    "# We will use the same configuration than in the HuggingFace example\n",
-    "config_torch = FedDatasetConfig(\n",
-    "    seed=0,\n",
-    "    n_nodes=2,\n",
-    "    replacement=False\n",
-    ")\n",
+    "# We will use the same configuration than in the HuggingFace example\n",
+    "config_torch = FedDatasetConfig(seed=0, n_nodes=2, replacement=False)\n",
     "\n",
-    "# Federate the Dataset we just created\n",
+    "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
-    "    centralized_data=fcd_torch,\n",
-    "    config=config_torch\n",
+    "    centralized_data=fcd_torch, config=config_torch\n",
     ")\n",
     "\n",
     "print(f\"Flex dataset two steps: {flex_dataset_two_step_torch[0].X_data[0]}\")"
@@ -748,8 +754,7 @@
    "source": [
     "# Federate the dataset directly\n",
     "flex_dataset_torch = FedDataDistribution.from_config_with_torchtext_dataset(\n",
-    "    torch_dataset,\n",
-    "    config_torch\n",
+    "    torch_dataset, config_torch\n",
     ")\n",
     "print(f\"Flex dataset direct: {flex_dataset_torch[0].X_data[0]}\")"
    ]
