--- a/notebooks/Two ways of updating weights with FLEXible.ipynb
+++ b/notebooks/Two ways of updating weights with FLEXible.ipynb
@@ -21,6 +21,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "\n",
     "device = (\n",
     "    \"cuda\"\n",
     "    if torch.cuda.is_available()\n",
@@ -49,10 +50,9 @@
     "\n",
     "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")\n",
     "\n",
-    "mnist_transforms = transforms.Compose([\n",
-    "                transforms.ToTensor(),\n",
-    "                transforms.Normalize((0.5,), (0.5,))\n",
-    "        ])"
+    "mnist_transforms = transforms.Compose(\n",
+    "    [transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))]\n",
+    ")"
    ]
   },
   {
@@ -76,11 +76,12 @@
     "from flex.pool import FlexPool\n",
     "from flex.model import FlexModel\n",
     "\n",
+    "\n",
     "class SimpleNet(nn.Module):\n",
     "    def __init__(self, num_classes=10):\n",
     "        super().__init__()\n",
     "        self.flatten = nn.Flatten()\n",
-    "        self.fc1 = nn.Linear(28*28, 128)\n",
+    "        self.fc1 = nn.Linear(28 * 28, 128)\n",
     "        self.fc2 = nn.Linear(128, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -90,11 +91,14 @@
     "        x = self.fc2(x)\n",
     "        return F.log_softmax(x, dim=1)\n",
     "\n",
+    "\n",
     "@init_server_model\n",
     "def build_server_model():\n",
     "    server_flex_model = FlexModel()\n",
     "\n",
-    "    server_flex_model[\"model\"] = SimpleNet().to(device) # Ensure all models are on the same device\n",
+    "    server_flex_model[\"model\"] = SimpleNet().to(\n",
+    "        device\n",
+    "    )  # Ensure all models are on the same device\n",
     "    # Required to store this for later stages of the FL training process\n",
     "    server_flex_model[\"criterion\"] = torch.nn.CrossEntropyLoss()\n",
     "    server_flex_model[\"optimizer_func\"] = torch.optim.Adam\n",
@@ -102,13 +106,16 @@
     "\n",
     "    return server_flex_model\n",
     "\n",
+    "\n",
     "flex_pool = FlexPool.client_server_pool(flex_dataset, init_func=build_server_model)\n",
     "\n",
     "clients = flex_pool.clients\n",
     "servers = flex_pool.servers\n",
     "aggregators = flex_pool.aggregators\n",
     "\n",
-    "print(f\"Number of nodes in the pool {len(flex_pool)}: {len(servers)} server plus {len(clients)} clients. The server is also an aggregator\")"
+    "print(\n",
+    "    f\"Number of nodes in the pool {len(flex_pool)}: {len(servers)} server plus {len(clients)} clients. The server is also an aggregator\"\n",
+    ")"
    ]
   },
   {
@@ -125,13 +132,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Select clients\n",
-    "clients_per_round=2\n",
+    "# Select clients\n",
+    "clients_per_round = 2\n",
     "selected_clients_pool = clients.select(clients_per_round)\n",
     "selected_clients = selected_clients_pool.clients\n",
     "\n",
-    "print(f\"Server node is indentified by key \\\"{servers.actor_ids[0]}\\\"\")\n",
-    "print(f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\")"
+    "print(f'Server node is indentified by key \"{servers.actor_ids[0]}\"')\n",
+    "print(\n",
+    "    f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\"\n",
+    ")"
    ]
   },
   {
@@ -178,12 +187,15 @@
     "from copy import deepcopy\n",
     "from tqdm import tqdm\n",
     "\n",
+    "\n",
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    train_dataset = client_data.to_torchvision_dataset(transform=mnist_transforms)\n",
     "    client_dataloader = DataLoader(train_dataset, batch_size=64)\n",
     "    model = client_flex_model[\"model\"]\n",
-    "    # client_flex_model['previous_model'] = deepcopy(model) # Required to use `collect_client_diff_weights_pt` primitive\n",
-    "    optimizer = client_flex_model['optimizer_func'](model.parameters(), **client_flex_model[\"optimizer_kwargs\"])\n",
+    "    # client_flex_model['previous_model'] = deepcopy(model) # Required to use `collect_client_diff_weights_pt` primitive\n",
+    "    optimizer = client_flex_model[\"optimizer_func\"](\n",
+    "        model.parameters(), **client_flex_model[\"optimizer_kwargs\"]\n",
+    "    )\n",
     "    model = model.train()\n",
     "    model = model.to(device)\n",
     "    criterion = client_flex_model[\"criterion\"]\n",
@@ -274,6 +286,7 @@
    "source": [
     "from flex.pool import evaluate_server_model\n",
     "\n",
+    "\n",
     "@evaluate_server_model\n",
     "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
     "    model = server_flex_model[\"model\"]\n",
@@ -282,10 +295,12 @@
     "    test_acc = 0\n",
     "    total_count = 0\n",
     "    model = model.to(device)\n",
-    "    criterion=server_flex_model['criterion']\n",
+    "    criterion = server_flex_model[\"criterion\"]\n",
     "    # get test data as a torchvision object\n",
     "    test_dataset = test_data.to_torchvision_dataset(transform=mnist_transforms)\n",
-    "    test_dataloader = DataLoader(test_dataset, batch_size=256, shuffle=True, pin_memory=False)\n",
+    "    test_dataloader = DataLoader(\n",
+    "        test_dataset, batch_size=256, shuffle=True, pin_memory=False\n",
+    "    )\n",
     "    losses = []\n",
     "    with torch.no_grad():\n",
     "        for data, target in test_dataloader:\n",
@@ -331,12 +346,17 @@
     "from copy import deepcopy\n",
     "from tqdm import tqdm\n",
     "\n",
+    "\n",
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    train_dataset = client_data.to_torchvision_dataset(transform=mnist_transforms)\n",
     "    client_dataloader = DataLoader(train_dataset, batch_size=64)\n",
     "    model = client_flex_model[\"model\"].to(device)\n",
-    "    client_flex_model['previous_model'] = deepcopy(model) # Required to use `collect_client_diff_weights_pt` primitive\n",
-    "    optimizer = client_flex_model['optimizer_func'](model.parameters(), **client_flex_model[\"optimizer_kwargs\"])\n",
+    "    client_flex_model[\"previous_model\"] = deepcopy(\n",
+    "        model\n",
+    "    )  # Required to use `collect_client_diff_weights_pt` primitive\n",
+    "    optimizer = client_flex_model[\"optimizer_func\"](\n",
+    "        model.parameters(), **client_flex_model[\"optimizer_kwargs\"]\n",
+    "    )\n",
     "    model = model.train()\n",
     "    criterion = client_flex_model[\"criterion\"]\n",
     "    epochs = 5\n",
@@ -430,7 +450,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "metrics = servers.map(evaluate_global_model, test_data=test_data)\n",
     "print(metrics[0])"
    ]
@@ -454,12 +473,16 @@
     "# Auxiliar function to clear unused gpu mem in clients\n",
     "def clean_up_models(client_model: FlexModel, _):\n",
     "    import gc\n",
+    "\n",
     "    del client_model[\"model\"]\n",
     "    del client_model[\"previous_model\"]\n",
     "    gc.collect()\n",
     "\n",
-    "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=build_server_model)\n",
+    "\n",
+    "def train_n_rounds(n_rounds, clients_per_round=20):\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset, init_func=build_server_model\n",
+    "    )\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
