--- a/notebooks/Federated MNIST PT example with simplified primitives.ipynb
+++ b/notebooks/Federated MNIST PT example with simplified primitives.ipynb
@@ -30,6 +30,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "\n",
     "device = (\n",
     "    \"cuda\"\n",
     "    if torch.cuda.is_available()\n",
@@ -54,10 +55,9 @@
     "server_id = \"server\"\n",
     "flex_dataset[server_id] = test_data\n",
     "\n",
-    "mnist_transforms = transforms.Compose([\n",
-    "            transforms.ToTensor(),\n",
-    "            transforms.Normalize((0.5,), (0.5,))\n",
-    "        ])"
+    "mnist_transforms = transforms.Compose(\n",
+    "    [transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))]\n",
+    ")"
    ]
   },
   {
@@ -81,11 +81,12 @@
     "from flex.pool import FlexPool\n",
     "from flex.model import FlexModel\n",
     "\n",
+    "\n",
     "class SimpleNet(nn.Module):\n",
     "    def __init__(self, num_classes=10):\n",
     "        super().__init__()\n",
     "        self.flatten = nn.Flatten()\n",
-    "        self.fc1 = nn.Linear(28*28, 128)\n",
+    "        self.fc1 = nn.Linear(28 * 28, 128)\n",
     "        self.fc2 = nn.Linear(128, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -94,6 +95,7 @@
     "        x = F.relu(x)\n",
     "        x = self.fc2(x)\n",
     "        return F.log_softmax(x, dim=1)\n",
+    "\n",
     "\n",
     "@init_server_model\n",
     "def build_server_model():\n",
@@ -107,13 +109,18 @@
     "\n",
     "    return server_flex_model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(flex_dataset, server_id=server_id, init_func=build_server_model)\n",
+    "\n",
+    "flex_pool = FlexPool.client_server_pool(\n",
+    "    flex_dataset, server_id=server_id, init_func=build_server_model\n",
+    ")\n",
     "\n",
     "clients = flex_pool.clients\n",
     "servers = flex_pool.servers\n",
     "aggregators = flex_pool.aggregators\n",
     "\n",
-    "print(f\"Number of nodes in the pool {len(flex_pool)}: {len(servers)} server plus {len(clients)} clients. The server is also an aggregator\")"
+    "print(\n",
+    "    f\"Number of nodes in the pool {len(flex_pool)}: {len(servers)} server plus {len(clients)} clients. The server is also an aggregator\"\n",
+    ")"
    ]
   },
   {
@@ -130,13 +137,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Select clients\n",
-    "clients_per_round=20\n",
+    "# Select clients\n",
+    "clients_per_round = 20\n",
     "selected_clients_pool = clients.select(clients_per_round)\n",
     "selected_clients = selected_clients_pool.clients\n",
     "\n",
-    "print(f\"Server node is indentified by key \\\"{servers.actor_ids[0]}\\\"\")\n",
-    "print(f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\")"
+    "print(f'Server node is indentified by key \"{servers.actor_ids[0]}\"')\n",
+    "print(\n",
+    "    f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\"\n",
+    ")"
    ]
   },
   {
@@ -175,11 +184,14 @@
     "from flex.data import Dataset\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
+    "\n",
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    train_dataset = client_data.to_torchvision_dataset(transform=mnist_transforms)\n",
     "    client_dataloader = DataLoader(train_dataset, batch_size=20)\n",
     "    model = client_flex_model[\"model\"]\n",
-    "    optimizer = client_flex_model['optimizer_func'](model.parameters(), **client_flex_model[\"optimizer_kwargs\"])\n",
+    "    optimizer = client_flex_model[\"optimizer_func\"](\n",
+    "        model.parameters(), **client_flex_model[\"optimizer_kwargs\"]\n",
+    "    )\n",
     "    model = model.train()\n",
     "    model = model.to(device)\n",
     "    criterion = client_flex_model[\"criterion\"]\n",
@@ -191,6 +203,7 @@
     "            loss = criterion(pred, labels)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "\n",
     "\n",
     "selected_clients.map(train)"
    ]
@@ -274,10 +287,12 @@
     "    test_acc = 0\n",
     "    total_count = 0\n",
     "    model = model.to(device)\n",
-    "    criterion=server_flex_model['criterion']\n",
+    "    criterion = server_flex_model[\"criterion\"]\n",
     "    # get test data as a torchvision object\n",
     "    test_dataset = test_data.to_torchvision_dataset(transform=mnist_transforms)\n",
-    "    test_dataloader = DataLoader(test_dataset, batch_size=256, shuffle=True, pin_memory=False)\n",
+    "    test_dataloader = DataLoader(\n",
+    "        test_dataset, batch_size=256, shuffle=True, pin_memory=False\n",
+    "    )\n",
     "    losses = []\n",
     "    with torch.no_grad():\n",
     "        for data, target in test_dataloader:\n",
@@ -291,6 +306,7 @@
     "    test_loss = sum(losses) / len(losses)\n",
     "    test_acc /= total_count\n",
     "    return test_loss, test_acc\n",
+    "\n",
     "\n",
     "metrics = servers.map(evaluate_global_model)\n",
     "print(metrics[0])"
@@ -312,8 +328,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model)\n",
+    "def train_n_rounds(n_rounds, clients_per_round=20):\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model\n",
+    "    )\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
