--- a/notebooks/Federated MNIST TF example with simplified primitives.ipynb
+++ b/notebooks/Federated MNIST TF example with simplified primitives.ipynb
@@ -30,12 +30,16 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
+    "\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
     "\n",
     "import tensorflow as tf\n",
+    "\n",
     "print(\"Version: \", tf.__version__)\n",
     "print(\"Eager mode: \", tf.executing_eagerly())\n",
-    "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")"
+    "print(\n",
+    "    \"GPU is\", \"available\" if tf.config.list_physical_devices(\"GPU\") else \"NOT AVAILABLE\"\n",
+    ")"
    ]
   },
   {
@@ -70,26 +74,37 @@
     "from flex.pool import FlexPool\n",
     "from flex.pool import init_server_model_tf\n",
     "\n",
-    "# Defining the model\n",
-    "def get_model():\n",
-    "    model = tf.keras.models.Sequential([\n",
-    "    tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
-    "    tf.keras.layers.Dense(128, activation='relu'),\n",
-    "    tf.keras.layers.Dense(10, activation='softmax')\n",
-    "    ])\n",
     "\n",
-    "    model.compile(optimizer='adam',\n",
-    "                loss='sparse_categorical_crossentropy',\n",
-    "                metrics=['accuracy'])\n",
+    "# Defining the model\n",
+    "def get_model():\n",
+    "    model = tf.keras.models.Sequential(\n",
+    "        [\n",
+    "            tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "            tf.keras.layers.Dense(128, activation=\"relu\"),\n",
+    "            tf.keras.layers.Dense(10, activation=\"softmax\"),\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    model.compile(\n",
+    "        optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"]\n",
+    "    )\n",
     "    return model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=init_server_model_tf, model=get_model())\n",
+    "\n",
+    "flex_pool = FlexPool.client_server_pool(\n",
+    "    fed_dataset=flex_dataset,\n",
+    "    server_id=server_id,\n",
+    "    init_func=init_server_model_tf,\n",
+    "    model=get_model(),\n",
+    ")\n",
     "\n",
     "clients = flex_pool.clients\n",
     "server = flex_pool.servers\n",
     "aggregator = flex_pool.aggregators\n",
     "\n",
-    "print(f\"Number of nodes in the pool {len(flex_pool)}: {len(server)} server plus {len(clients)} clients. The server is also an aggregator\")"
+    "print(\n",
+    "    f\"Number of nodes in the pool {len(flex_pool)}: {len(server)} server plus {len(clients)} clients. The server is also an aggregator\"\n",
+    ")"
    ]
   },
   {
@@ -98,13 +113,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Select clients\n",
-    "clients_per_round=20\n",
+    "# Select clients\n",
+    "clients_per_round = 20\n",
     "selected_clients_pool = clients.select(clients_per_round)\n",
     "selected_clients = selected_clients_pool.clients\n",
     "\n",
-    "print(f\"Server node is indentified by key \\\"{server.actor_ids[0]}\\\"\")\n",
-    "print(f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\")"
+    "print(f'Server node is indentified by key \"{server.actor_ids[0]}\"')\n",
+    "print(\n",
+    "    f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\"\n",
+    ")"
    ]
   },
   {
@@ -203,8 +220,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_n_rounds(n_rounds, batch_size, epochs, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=init_server_model_tf, model=get_model())\n",
+    "def train_n_rounds(n_rounds, batch_size, epochs, clients_per_round=20):\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset,\n",
+    "        server_id=server_id,\n",
+    "        init_func=init_server_model_tf,\n",
+    "        model=get_model(),\n",
+    "    )\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
@@ -213,7 +235,9 @@
     "        # Deploy the server model to the selected clients\n",
     "        pool.servers.map(deploy_server_model_tf, selected_clients)\n",
     "        # Each selected client trains her model\n",
-    "        selected_clients.map(train_tf, batch_size=batch_size, epochs=epochs, verbose=False)\n",
+    "        selected_clients.map(\n",
+    "            train_tf, batch_size=batch_size, epochs=epochs, verbose=False\n",
+    "        )\n",
     "        # The aggregador collects weights from the selected clients and aggregates them\n",
     "        pool.aggregators.map(collect_clients_weights_tf, selected_clients)\n",
     "        pool.aggregators.map(fed_avg)\n",
