--- a/notebooks/Federated Text Classification TF with flexible decorators.ipynb
+++ b/notebooks/Federated Text Classification TF with flexible decorators.ipynb
@@ -14,7 +14,9 @@
     "print(\"Version: \", tf.__version__)\n",
     "print(\"Eager mode: \", tf.executing_eagerly())\n",
     "print(\"Hub version: \", hub.__version__)\n",
-    "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")"
+    "print(\n",
+    "    \"GPU is\", \"available\" if tf.config.list_physical_devices(\"GPU\") else \"NOT AVAILABLE\"\n",
+    ")"
    ]
   },
   {
@@ -36,7 +38,9 @@
    "source": [
     "from flex.data import Dataset\n",
     "\n",
-    "flex_data = Dataset.from_tfds_text_dataset(train_data, X_columns=['text'], label_columns=['label'])"
+    "flex_data = Dataset.from_tfds_text_dataset(\n",
+    "    train_data, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")"
    ]
   },
   {
@@ -49,9 +53,11 @@
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
     "config.n_nodes = 2\n",
-    "config.replacement = False # ensure that clients do not share any data\n",
-    "config.node_ids = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FedDataDistribution.from_config(centralized_data=flex_data, config=config)"
+    "config.replacement = False  # ensure that clients do not share any data\n",
+    "config.node_ids = [\"client1\", \"client2\"]  # Optional\n",
+    "flex_dataset = FedDataDistribution.from_config(\n",
+    "    centralized_data=flex_data, config=config\n",
+    ")"
    ]
   },
   {
@@ -65,7 +71,9 @@
     "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_nodes=2)\n",
     "# Assign test data to server_id\n",
     "server_id = \"server\"\n",
-    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])"
+    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(\n",
+    "    test_data, X_columns=[\"text\"], label_columns=[\"label\"]\n",
+    ")"
    ]
   },
   {
@@ -89,19 +97,23 @@
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
-    "# Defining the model\n",
+    "\n",
+    "\n",
+    "# Defining the model\n",
     "@init_server_model\n",
     "def define_model(*args):\n",
-    "    # model = \"https://tfhub.dev/google/nnlm-en-dim110-with-normalization/2\"\n",
+    "    # model = \"https://tfhub.dev/google/nnlm-en-dim110-with-normalization/2\"\n",
     "    model = \"https://tfhub.dev/google/nnlm-en-dim50/2\"\n",
     "    hub_layer = hub.KerasLayer(model, input_shape=[], dtype=tf.string, trainable=True)\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(hub_layer)\n",
-    "    model.add(tf.keras.layers.Dense(16, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dense(16, activation=\"relu\"))\n",
     "    model.add(tf.keras.layers.Dense(1))\n",
-    "    model.compile(optimizer='adam',\n",
-    "                    loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
-    "                    metrics=[tf.metrics.BinaryAccuracy(threshold=0.0, name='accuracy')])\n",
+    "    model.compile(\n",
+    "        optimizer=\"adam\",\n",
+    "        loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
+    "        metrics=[tf.metrics.BinaryAccuracy(threshold=0.0, name=\"accuracy\")],\n",
+    "    )\n",
     "    server_flex_model = FlexModel()\n",
     "    server_flex_model[\"model\"] = model\n",
     "    server_flex_model[\"loss\"] = deepcopy(model.loss)\n",
@@ -118,7 +130,9 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=define_model)"
+    "flex_pool = FlexPool.client_server_pool(\n",
+    "    fed_dataset=flex_dataset, server_id=server_id, init_func=define_model\n",
+    ")"
    ]
   },
   {
@@ -143,6 +157,7 @@
    "source": [
     "from flex.model import FlexModel\n",
     "\n",
+    "\n",
     "@deploy_server_model\n",
     "def copy_model_to_clients(server_flex_model):\n",
     "    client_flex_model = FlexModel()\n",
@@ -152,7 +167,7 @@
     "    model.compile(\n",
     "        optimizer=server_flex_model[\"optimizer\"],\n",
     "        loss=server_flex_model[\"loss\"],\n",
-    "        metrics=server_flex_model[\"metrics\"]\n",
+    "        metrics=server_flex_model[\"metrics\"],\n",
     "    )\n",
     "    client_flex_model[\"model\"] = model\n",
     "    return client_flex_model"
@@ -315,7 +330,9 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):\n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=define_model)\n",
+    "    pool = FlexPool.client_server_pool(\n",
+    "        fed_dataset=flex_dataset, server_id=server_id, init_func=define_model\n",
+    "    )\n",
     "    pool.servers.map(copy_model_to_clients, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
