--- a/notebooks/Federating a linear regression model.ipynb
+++ b/notebooks/Federating a linear regression model.ipynb
@@ -32,7 +32,9 @@
     "diabetes = load_diabetes()\n",
     "\n",
     "# Generate train-test splits\n",
-    "X_train, X_test, y_train, y_test = train_test_split(diabetes.data[:, np.newaxis, 2], diabetes.target, test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    diabetes.data[:, np.newaxis, 2], diabetes.target, test_size=0.33, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -78,6 +80,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "def plot_lm(lm, test_data, title):\n",
     "    preds = lm.predict(test_data.X_data)\n",
     "    # Plot outputs\n",
@@ -85,7 +88,7 @@
     "    plt.scatter(test_data.X_data, test_data.y_data, color=\"black\")\n",
     "    plt.plot(test_data.X_data, preds, color=\"blue\", linewidth=3)\n",
     "\n",
-    "    \n",
+    "\n",
     "centralized_model = LinearRegression()\n",
     "centralized_model = centralized_model.fit(train_diabetes.X_data, train_diabetes.y_data)\n",
     "plot_lm(centralized_model, test_diabetes, \"Centralized model\")"
@@ -100,17 +103,18 @@
     "from sklearn import metrics\n",
     "from math import sqrt\n",
     "\n",
+    "\n",
     "def score_model(labels, preds):\n",
-    "    \n",
     "    rmse = sqrt(metrics.mean_squared_error(labels, preds))\n",
     "    r2_score = metrics.r2_score(labels, preds)\n",
     "\n",
     "    results = rmse, r2_score\n",
-    "    \n",
+    "\n",
     "    print(\"-----------------\")\n",
     "    print(\"RMSE: {},\\nr2: {}\".format(*results))\n",
     "    print(\"-----------------\")\n",
-    "    \n",
+    "\n",
+    "\n",
     "print(\"Centralized model scores\")\n",
     "preds = centralized_model.predict(test_diabetes.X_data)\n",
     "score_model(test_diabetes.y_data, preds)"
@@ -150,13 +154,17 @@
     "    return flex_model\n",
     "\n",
     "\n",
-    "p = FlexPool.client_server_pool(federated_diabetes, server_id=server_id, init_func=build_server_model)\n",
+    "p = FlexPool.client_server_pool(\n",
+    "    federated_diabetes, server_id=server_id, init_func=build_server_model\n",
+    ")\n",
     "\n",
     "clients = p.clients\n",
     "servers = p.servers\n",
     "aggregators = p.aggregators\n",
     "\n",
-    "print(f\"Number of nodes in the pool {len(p)}: {len(servers)} servers plus {len(clients)} clients. The server is also an aggregator\")"
+    "print(\n",
+    "    f\"Number of nodes in the pool {len(p)}: {len(servers)} servers plus {len(clients)} clients. The server is also an aggregator\"\n",
+    ")"
    ]
   },
   {
@@ -177,9 +185,11 @@
     "\n",
     "from flex.pool import deploy_server_model\n",
     "\n",
+    "\n",
     "@deploy_server_model\n",
     "def copy_server_model_to_clients(server_flex_model: FlexModel):\n",
     "    return copy.deepcopy(server_flex_model)\n",
+    "\n",
     "\n",
     "servers.map(copy_server_model_to_clients, clients)"
    ]
@@ -201,6 +211,7 @@
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    client_flex_model[\"model\"].fit(client_data.X_data, client_data.y_data)\n",
     "\n",
+    "\n",
     "clients.map(train)"
    ]
   },
@@ -220,9 +231,11 @@
    "source": [
     "from flex.pool import collect_clients_weights\n",
     "\n",
+    "\n",
     "@collect_clients_weights\n",
     "def get_clients_weights(client_flex_model: FlexModel):\n",
     "    return [client_flex_model[\"model\"].intercept_, client_flex_model[\"model\"].coef_]\n",
+    "\n",
     "\n",
     "aggregators.map(get_clients_weights, clients)\n",
     "# The same as:\n",
@@ -248,9 +261,11 @@
     "from flex.pool import aggregate_weights\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "@aggregate_weights\n",
     "def aggregate(list_of_weights: list):\n",
     "    return np.mean(np.asarray(list_of_weights, dtype=object), axis=0)\n",
+    "\n",
     "\n",
     "# Aggregate weights\n",
     "aggregators.map(aggregate)\n",
@@ -274,10 +289,12 @@
    "source": [
     "from flex.pool import set_aggregated_weights\n",
     "\n",
+    "\n",
     "@set_aggregated_weights\n",
     "def set_agreggated_weights_to_server(server_flex_model: FlexModel, aggregated_weights):\n",
     "    server_flex_model[\"model\"].intercept_ = aggregated_weights[0]\n",
     "    server_flex_model[\"model\"].coef_ = aggregated_weights[1]\n",
+    "\n",
     "\n",
     "# Set aggregated weights in the server model\n",
     "aggregators.map(set_agreggated_weights_to_server, servers)\n",
@@ -304,6 +321,7 @@
     "    plot_lm(server_flex_model[\"model\"], test_data, title=\"K-means using federated data\")\n",
     "    score_model(test_data.y_data, preds)\n",
     "\n",
+    "\n",
     "servers.map(evaluate_global_model)"
    ]
   },
@@ -324,7 +342,9 @@
    "outputs": [],
    "source": [
     "n_rounds = 1\n",
-    "p = FlexPool.client_server_pool(federated_diabetes, server_id=server_id, init_func=build_server_model)\n",
+    "p = FlexPool.client_server_pool(\n",
+    "    federated_diabetes, server_id=server_id, init_func=build_server_model\n",
+    ")\n",
     "servers = p.servers\n",
     "clients = p.clients\n",
     "aggregators = p.aggregators\n",
